commit translated contents

--- a/docs/visual-basic/misc/bc31091.md
+++ b/docs/visual-basic/misc/bc31091.md
@@ -1,5 +1,5 @@
 ---
-title: 형식의 가져오기 '&lt;typename&gt;'어셈블리 또는 모듈의 ' from&lt;이름&gt;' 실패
+title: 가져오기 형식 '<typename>'어셈블리 또는 모듈'에서<name>' 실패
 ms.date: 07/20/2015
 f1_keywords:
 - bc31091
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31091
 ms.assetid: 84b4a407-32d3-4697-88ae-13485d834a1f
-ms.openlocfilehash: 6b932aab5ef1f613a6387c9cdaf680a18d4815e6
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 9c2643ef884838c44c32831b0700089d608c2101
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54645381"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55257384"
 ---
-# <a name="import-of-type-lttypenamegt-from-assembly-or-module-ltnamegt-failed"></a>형식의 가져오기 '&lt;typename&gt;'어셈블리 또는 모듈의 ' from&lt;이름&gt;' 실패
+# <a name="import-of-type-typename-from-assembly-or-module-name-failed"></a>가져오기 형식 '\<typename >' 어셈블리 또는 모듈에서 '\<이름 >' 실패
 참조된 모든 라이브러리가 서로 호환되는지 확인합니다.  
   
  **오류 ID:** BC31091  
