--- a/docs/visual-basic/misc/bc30345.md
+++ b/docs/visual-basic/misc/bc30345.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;method1&gt;'및'&lt;method2&gt;'는 'ByRef' 또는 'ByVal'로 선언 된 매개 변수만 다르므로 서로 오버 로드할 수 없습니다."
+title: "'<method1>'및'<method2>'는 'ByRef' 또는 'ByVal'로 선언 된 매개 변수만 다르므로 서로 오버 로드할 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - bc30345
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30345
 ms.assetid: 82af13b1-2641-4881-b25a-c782974bded1
-ms.openlocfilehash: 2cb236fccf0b8053a5d8ae77e666e4ab1550e97f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 4e5f661cade66e24250a3419f54e51ceda8ae06d
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54679346"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264468"
 ---
-# <a name="ltmethod1gt-and-ltmethod2gt-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-byref-or-byval"></a>'&lt;method1&gt;'및'&lt;method2&gt;'는 'ByRef' 또는 'ByVal'로 선언 된 매개 변수만 다르므로 서로 오버 로드할 수 없습니다.
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-byref-or-byval"></a>'\<method1 >' 및 '\<method2 >'는 'ByRef' 또는 'ByVal'로 선언 된 매개 변수만 다르므로 서로 오버 로드할 수 없습니다.
 메서드를 `ByRef` 또는 `ByVal`로 선언된 매개 변수에 의해 첫 번째만 다른 메서드로 오버로드하려고 했습니다.  
   
  **오류 ID:** BC30345  
