--- a/docs/visual-basic/misc/bc30970.md
+++ b/docs/visual-basic/misc/bc30970.md
@@ -1,5 +1,5 @@
 ---
-title: "&lt;메시지&gt; 대 한 파일 참조가 섞여 있기 때문에이 오류도 수 '&lt;filename1&gt;'in project'&lt;projectname1&gt;'에 대 한 파일 참조' with&lt;filename2&gt;'에서 프로젝트 '&lt;projectname2&gt;'"
+title: <message> 이 오류 때문일 수도 있습니다에 대 한 파일 참조가 섞여 '<filename1>'프로젝트' in에서<projectname1>'에 대 한 파일 참조' with<filename2>'in project'<projectname2>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30970
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30970
 ms.assetid: 81cc4f7b-cc16-46cc-9a49-74980300e158
-ms.openlocfilehash: c5ddde4e7e175a1ae0439c114adb25de44d3c965
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 7d4b1a2218bcb5c55177a0b556898be6149498e3
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54631404"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55260829"
 ---
-# <a name="ltmessagegt-this-error-could-also-be-due-to-mixing-a-file-reference-to-ltfilename1gt-in-project-ltprojectname1gt-with-a-file-reference-to-ltfilename2gt-in-project-ltprojectname2gt"></a>&lt;메시지&gt; 대 한 파일 참조가 섞여 있기 때문에이 오류도 수 '&lt;filename1&gt;'in project'&lt;projectname1&gt;'에 대 한 파일 참조' with&lt;filename2&gt;'에서 프로젝트 '&lt;projectname2&gt;'
+# <a name="message-this-error-could-also-be-due-to-mixing-a-file-reference-to-filename1-in-project-projectname1-with-a-file-reference-to-filename2-in-project-projectname2"></a>\<메시지 >이 오류 때문일 수도 있습니다에 대 한 파일 참조가 섞여 '\<filename1 >' 프로젝트에서 '\<projectname1 >'에 대 한 파일 참조를 사용 하 여 '\<filename2 >' 프로젝트에서 '\<projectname2 >'
 \<메시지 >이 오류 때문일 수도 있습니다에 대 한 파일 참조가 섞여 '\<filepathname1 >' 프로젝트에서 '\<projectname1 >'에 대 한 파일 참조를 사용 하 여 '\<filepathname2 >' 프로젝트에서 '\<projectname2 > '.  두 어셈블리가 동일하면 동일한 대상을 참조하도록 두 참조를 바꿔 보세요.  
   
  코드 프로젝트에서 다른 프로젝트의 멤버에 액세스할 수 있지만 솔루션의 구성 참조를 해결 하려면 Visual Basic 컴파일러를 허용 하지 않습니다.  
