--- a/docs/visual-basic/misc/bc42310.md
+++ b/docs/visual-basic/misc/bc42310.md
@@ -1,5 +1,5 @@
 ---
-title: "'Include' 있어야 하는 XML 주석 태그는 '&lt;특성&gt;' 특성"
+title: "'Include' 있어야 하는 XML 주석 태그는 '<attribute>' 특성"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42310
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42310
 ms.assetid: b3c377d6-401a-477e-8f2d-b2881f2818a9
-ms.openlocfilehash: 6b01a8f23f810f0d1f4c496404dc6e9a00d1a699
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 52396325601560c55d1392f8d47f98bb9ca230f1
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54579435"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55274510"
 ---
-# <a name="xml-comment-tag-include-must-have-a-ltattributegt-attribute"></a>'Include' 있어야 하는 XML 주석 태그는 '&lt;특성&gt;' 특성
+# <a name="xml-comment-tag-include-must-have-a-attribute-attribute"></a>'Include' 있어야 하는 XML 주석 태그는 '\<특성 >' 특성
 XML 주석 태그 'i' 있어야를 \<특성 > 특성입니다. XML 주석이 무시됩니다.  
   
  `file` include `path` 태그로 전달되는 `<`또는`>` 특성이 누락되었거나 불완전합니다.  
