commit bilingual contents

--- a/docs/visual-basic/misc/bc30461.md
+++ b/docs/visual-basic/misc/bc30461.md
@@ -1,5 +1,5 @@
 ---
-title: 클래스를 선언할 수 없습니다. '&lt;지정자&gt;'
+title: 클래스를 선언할 수 없습니다. '<specifier>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30461
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30461
 ms.assetid: 275644b0-1c47-4433-8a16-225df69cb46f
-ms.openlocfilehash: 20b3f9f93e154f04b88a9f867b44e81ae75a0740
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 590e4f975d84d38a7b1b348689d1073b6248bec1
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54551750"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264179"
 ---
-# <a name="classes-cannot-be-declared-ltspecifiergt"></a><span data-ttu-id="54a63-102">클래스를 선언할 수 없습니다. '&lt;지정자&gt;'</span><span class="sxs-lookup"><span data-stu-id="54a63-102">Classes cannot be declared '&lt;specifier&gt;'</span></span>
-<span data-ttu-id="54a63-103">잘못된 지정자를 사용하여 `Class` 또는 `Module` 을 선언하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="54a63-103">You have attempted to declare a `Class` or `Module` with an invalid specifier.</span></span>  
+# <a name="classes-cannot-be-declared-specifier"></a><span data-ttu-id="8f0fc-102">클래스를 선언할 수 없습니다. '\<지정자 >'</span><span class="sxs-lookup"><span data-stu-id="8f0fc-102">Classes cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="8f0fc-103">잘못된 지정자를 사용하여 `Class` 또는 `Module` 을 선언하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="8f0fc-103">You have attempted to declare a `Class` or `Module` with an invalid specifier.</span></span>  
   
- <span data-ttu-id="54a63-104">**오류 ID:** BC30461</span><span class="sxs-lookup"><span data-stu-id="54a63-104">**Error ID:** BC30461</span></span>  
+ <span data-ttu-id="8f0fc-104">**오류 ID:** BC30461</span><span class="sxs-lookup"><span data-stu-id="8f0fc-104">**Error ID:** BC30461</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="54a63-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="54a63-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8f0fc-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="8f0fc-105">To correct this error</span></span>  
   
--   <span data-ttu-id="54a63-106">지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="54a63-106">Remove the specifier.</span></span>  
+-   <span data-ttu-id="8f0fc-106">지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="8f0fc-106">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="54a63-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="54a63-107">See also</span></span>
-- [<span data-ttu-id="54a63-108">Class 문</span><span class="sxs-lookup"><span data-stu-id="54a63-108">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="54a63-109">Module 문</span><span class="sxs-lookup"><span data-stu-id="54a63-109">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a><span data-ttu-id="8f0fc-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="8f0fc-107">See also</span></span>
+- [<span data-ttu-id="8f0fc-108">Class 문</span><span class="sxs-lookup"><span data-stu-id="8f0fc-108">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
+- [<span data-ttu-id="8f0fc-109">Module 문</span><span class="sxs-lookup"><span data-stu-id="8f0fc-109">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
