--- a/docs/visual-basic/misc/bc30345.md
+++ b/docs/visual-basic/misc/bc30345.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;method1&gt;'및'&lt;method2&gt;'는 'ByRef' 또는 'ByVal'로 선언 된 매개 변수만 다르므로 서로 오버 로드할 수 없습니다."
+title: "'<method1>'및'<method2>'는 'ByRef' 또는 'ByVal'로 선언 된 매개 변수만 다르므로 서로 오버 로드할 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - bc30345
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30345
 ms.assetid: 82af13b1-2641-4881-b25a-c782974bded1
-ms.openlocfilehash: 2cb236fccf0b8053a5d8ae77e666e4ab1550e97f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 4e5f661cade66e24250a3419f54e51ceda8ae06d
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54679346"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264468"
 ---
-# <a name="ltmethod1gt-and-ltmethod2gt-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-byref-or-byval"></a><span data-ttu-id="fba79-102">'&lt;method1&gt;'및'&lt;method2&gt;'는 'ByRef' 또는 'ByVal'로 선언 된 매개 변수만 다르므로 서로 오버 로드할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="fba79-102">'&lt;method1&gt;' and '&lt;method2&gt;' cannot overload each other because they differ only by parameters declared 'ByRef' or 'ByVal'</span></span>
-<span data-ttu-id="fba79-103">메서드를 `ByRef` 또는 `ByVal`로 선언된 매개 변수에 의해 첫 번째만 다른 메서드로 오버로드하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="fba79-103">You have attempted to overload a method with another method that differs from the first only by a parameter declared as `ByRef` or `ByVal`.</span></span>  
+# <a name="method1-and-method2-cannot-overload-each-other-because-they-differ-only-by-parameters-declared-byref-or-byval"></a><span data-ttu-id="37557-102">'\<method1 >' 및 '\<method2 >'는 'ByRef' 또는 'ByVal'로 선언 된 매개 변수만 다르므로 서로 오버 로드할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="37557-102">'\<method1>' and '\<method2>' cannot overload each other because they differ only by parameters declared 'ByRef' or 'ByVal'</span></span>
+<span data-ttu-id="37557-103">메서드를 `ByRef` 또는 `ByVal`로 선언된 매개 변수에 의해 첫 번째만 다른 메서드로 오버로드하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="37557-103">You have attempted to overload a method with another method that differs from the first only by a parameter declared as `ByRef` or `ByVal`.</span></span>  
   
- <span data-ttu-id="fba79-104">**오류 ID:** BC30345</span><span class="sxs-lookup"><span data-stu-id="fba79-104">**Error ID:** BC30345</span></span>  
+ <span data-ttu-id="37557-104">**오류 ID:** BC30345</span><span class="sxs-lookup"><span data-stu-id="37557-104">**Error ID:** BC30345</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fba79-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fba79-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="37557-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="37557-105">To correct this error</span></span>  
   
--   <span data-ttu-id="fba79-106">`ByRef` 또는 `ByVal` 매개 변수 이름 이외에 메서드에 다른 차별점이 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="fba79-106">Ensure that the methods are differentiated by more than the name of the `ByRef` or `ByVal` parameter.</span></span>  
+-   <span data-ttu-id="37557-106">`ByRef` 또는 `ByVal` 매개 변수 이름 이외에 메서드에 다른 차별점이 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="37557-106">Ensure that the methods are differentiated by more than the name of the `ByRef` or `ByVal` parameter.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fba79-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="fba79-107">See also</span></span>
-- [<span data-ttu-id="fba79-108">프로시저 오버로딩</span><span class="sxs-lookup"><span data-stu-id="fba79-108">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [<span data-ttu-id="fba79-109">프로시저를 오버로드할 때 고려해야 할 사항</span><span class="sxs-lookup"><span data-stu-id="fba79-109">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="37557-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="37557-107">See also</span></span>
+- [<span data-ttu-id="37557-108">프로시저 오버로딩</span><span class="sxs-lookup"><span data-stu-id="37557-108">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
+- [<span data-ttu-id="37557-109">프로시저를 오버로드할 때 고려해야 할 사항</span><span class="sxs-lookup"><span data-stu-id="37557-109">Considerations in Overloading Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/considerations-in-overloading-procedures.md)
