--- a/docs/visual-basic/misc/bc30970.md
+++ b/docs/visual-basic/misc/bc30970.md
@@ -1,5 +1,5 @@
 ---
-title: "&lt;메시지&gt; 대 한 파일 참조가 섞여 있기 때문에이 오류도 수 '&lt;filename1&gt;'in project'&lt;projectname1&gt;'에 대 한 파일 참조' with&lt;filename2&gt;'에서 프로젝트 '&lt;projectname2&gt;'"
+title: <message> 이 오류 때문일 수도 있습니다에 대 한 파일 참조가 섞여 '<filename1>'프로젝트' in에서<projectname1>'에 대 한 파일 참조' with<filename2>'in project'<projectname2>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30970
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30970
 ms.assetid: 81cc4f7b-cc16-46cc-9a49-74980300e158
-ms.openlocfilehash: c5ddde4e7e175a1ae0439c114adb25de44d3c965
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 7d4b1a2218bcb5c55177a0b556898be6149498e3
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54631404"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55260829"
 ---
-# <a name="ltmessagegt-this-error-could-also-be-due-to-mixing-a-file-reference-to-ltfilename1gt-in-project-ltprojectname1gt-with-a-file-reference-to-ltfilename2gt-in-project-ltprojectname2gt"></a><span data-ttu-id="9a0d7-102">&lt;메시지&gt; 대 한 파일 참조가 섞여 있기 때문에이 오류도 수 '&lt;filename1&gt;'in project'&lt;projectname1&gt;'에 대 한 파일 참조' with&lt;filename2&gt;'에서 프로젝트 '&lt;projectname2&gt;'</span><span class="sxs-lookup"><span data-stu-id="9a0d7-102">&lt;message&gt; This error could also be due to mixing a file reference to '&lt;filename1&gt;' in project '&lt;projectname1&gt;' with a file reference to '&lt;filename2&gt;' in project '&lt;projectname2&gt;'</span></span>
-<span data-ttu-id="9a0d7-103">\<메시지 >이 오류 때문일 수도 있습니다에 대 한 파일 참조가 섞여 '\<filepathname1 >' 프로젝트에서 '\<projectname1 >'에 대 한 파일 참조를 사용 하 여 '\<filepathname2 >' 프로젝트에서 '\<projectname2 > '.</span><span class="sxs-lookup"><span data-stu-id="9a0d7-103">\<message> This error could also be due to mixing a file reference to '\<filepathname1>' in project '\<projectname1>' with a file reference to '\<filepathname2>' in project '\<projectname2>'.</span></span>  <span data-ttu-id="9a0d7-104">두 어셈블리가 동일하면 동일한 대상을 참조하도록 두 참조를 바꿔 보세요.</span><span class="sxs-lookup"><span data-stu-id="9a0d7-104">If both assemblies are identical, try replacing these references so both references are from the same location.</span></span>  
+# <a name="message-this-error-could-also-be-due-to-mixing-a-file-reference-to-filename1-in-project-projectname1-with-a-file-reference-to-filename2-in-project-projectname2"></a><span data-ttu-id="6abcd-102">\<메시지 >이 오류 때문일 수도 있습니다에 대 한 파일 참조가 섞여 '\<filename1 >' 프로젝트에서 '\<projectname1 >'에 대 한 파일 참조를 사용 하 여 '\<filename2 >' 프로젝트에서 '\<projectname2 >'</span><span class="sxs-lookup"><span data-stu-id="6abcd-102">\<message> This error could also be due to mixing a file reference to '\<filename1>' in project '\<projectname1>' with a file reference to '\<filename2>' in project '\<projectname2>'</span></span>
+<span data-ttu-id="6abcd-103">\<메시지 >이 오류 때문일 수도 있습니다에 대 한 파일 참조가 섞여 '\<filepathname1 >' 프로젝트에서 '\<projectname1 >'에 대 한 파일 참조를 사용 하 여 '\<filepathname2 >' 프로젝트에서 '\<projectname2 > '.</span><span class="sxs-lookup"><span data-stu-id="6abcd-103">\<message> This error could also be due to mixing a file reference to '\<filepathname1>' in project '\<projectname1>' with a file reference to '\<filepathname2>' in project '\<projectname2>'.</span></span>  <span data-ttu-id="6abcd-104">두 어셈블리가 동일하면 동일한 대상을 참조하도록 두 참조를 바꿔 보세요.</span><span class="sxs-lookup"><span data-stu-id="6abcd-104">If both assemblies are identical, try replacing these references so both references are from the same location.</span></span>  
   
- <span data-ttu-id="9a0d7-105">코드 프로젝트에서 다른 프로젝트의 멤버에 액세스할 수 있지만 솔루션의 구성 참조를 해결 하려면 Visual Basic 컴파일러를 허용 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="9a0d7-105">Code in your project accesses a member of another project, but the configuration of your solution does not allow the Visual Basic compiler to resolve the reference.</span></span>  
+ <span data-ttu-id="6abcd-105">코드 프로젝트에서 다른 프로젝트의 멤버에 액세스할 수 있지만 솔루션의 구성 참조를 해결 하려면 Visual Basic 컴파일러를 허용 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="6abcd-105">Code in your project accesses a member of another project, but the configuration of your solution does not allow the Visual Basic compiler to resolve the reference.</span></span>  
   
- <span data-ttu-id="9a0d7-106">다른 어셈블리에 정의 된 형식에 액세스 하려면 해당 어셈블리에 대 한 참조를 Visual Basic 컴파일러에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9a0d7-106">To access a type defined in another assembly, the Visual Basic compiler must have a reference to that assembly.</span></span> <span data-ttu-id="9a0d7-107">이 참조는 프로젝트 간의 순환 참조를 발생시키지 않는 명확한 단일 참조여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="9a0d7-107">This must be a single, unambiguous reference that does not cause circular references among projects.</span></span>  
+ <span data-ttu-id="6abcd-106">다른 어셈블리에 정의 된 형식에 액세스 하려면 해당 어셈블리에 대 한 참조를 Visual Basic 컴파일러에 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6abcd-106">To access a type defined in another assembly, the Visual Basic compiler must have a reference to that assembly.</span></span> <span data-ttu-id="6abcd-107">이 참조는 프로젝트 간의 순환 참조를 발생시키지 않는 명확한 단일 참조여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6abcd-107">This must be a single, unambiguous reference that does not cause circular references among projects.</span></span>  
   
- <span data-ttu-id="9a0d7-108">**오류 ID:** BC30970</span><span class="sxs-lookup"><span data-stu-id="9a0d7-108">**Error ID:** BC30970</span></span>  
+ <span data-ttu-id="6abcd-108">**오류 ID:** BC30970</span><span class="sxs-lookup"><span data-stu-id="6abcd-108">**Error ID:** BC30970</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9a0d7-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9a0d7-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6abcd-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6abcd-109">To correct this error</span></span>  
   
-1.  <span data-ttu-id="9a0d7-110">참조할 프로젝트에 가장 적합한 어셈블리를 생성하는 프로젝트를 결정합니다.</span><span class="sxs-lookup"><span data-stu-id="9a0d7-110">Determine which project produces the best assembly for your project to reference.</span></span> <span data-ttu-id="9a0d7-111">이러한 결정을 위해 파일 접근성 및 업데이트 빈도 등의 조건을 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9a0d7-111">For this decision, you might use criteria such as ease of file access and frequency of updates.</span></span>  
+1.  <span data-ttu-id="6abcd-110">참조할 프로젝트에 가장 적합한 어셈블리를 생성하는 프로젝트를 결정합니다.</span><span class="sxs-lookup"><span data-stu-id="6abcd-110">Determine which project produces the best assembly for your project to reference.</span></span> <span data-ttu-id="6abcd-111">이러한 결정을 위해 파일 접근성 및 업데이트 빈도 등의 조건을 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6abcd-111">For this decision, you might use criteria such as ease of file access and frequency of updates.</span></span>  
   
-2.  <span data-ttu-id="9a0d7-112">프로젝트 속성에서 사용 중인 형식을 정의하는 어셈블리가 포함된 파일에 대한 참조를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="9a0d7-112">In your project properties, add a reference to the file that contains the assembly that defines the type you are using.</span></span>  
+2.  <span data-ttu-id="6abcd-112">프로젝트 속성에서 사용 중인 형식을 정의하는 어셈블리가 포함된 파일에 대한 참조를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="6abcd-112">In your project properties, add a reference to the file that contains the assembly that defines the type you are using.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9a0d7-113">참고자료</span><span class="sxs-lookup"><span data-stu-id="9a0d7-113">See also</span></span>
-- [<span data-ttu-id="9a0d7-114">프로젝트의 참조 관리</span><span class="sxs-lookup"><span data-stu-id="9a0d7-114">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)
-- [<span data-ttu-id="9a0d7-115">프로젝트 및 솔루션 속성 관리</span><span class="sxs-lookup"><span data-stu-id="9a0d7-115">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
-- [<span data-ttu-id="9a0d7-116">끊어진 참조 문제 해결</span><span class="sxs-lookup"><span data-stu-id="9a0d7-116">Troubleshooting Broken References</span></span>](/visualstudio/ide/troubleshooting-broken-references)
+## <a name="see-also"></a><span data-ttu-id="6abcd-113">참고자료</span><span class="sxs-lookup"><span data-stu-id="6abcd-113">See also</span></span>
+- [<span data-ttu-id="6abcd-114">프로젝트의 참조 관리</span><span class="sxs-lookup"><span data-stu-id="6abcd-114">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)
+- [<span data-ttu-id="6abcd-115">프로젝트 및 솔루션 속성 관리</span><span class="sxs-lookup"><span data-stu-id="6abcd-115">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
+- [<span data-ttu-id="6abcd-116">끊어진 참조 문제 해결</span><span class="sxs-lookup"><span data-stu-id="6abcd-116">Troubleshooting Broken References</span></span>](/visualstudio/ide/troubleshooting-broken-references)
