--- a/docs/visual-basic/misc/bc31091.md
+++ b/docs/visual-basic/misc/bc31091.md
@@ -1,5 +1,5 @@
 ---
-title: 형식의 가져오기 '&lt;typename&gt;'어셈블리 또는 모듈의 ' from&lt;이름&gt;' 실패
+title: 가져오기 형식 '<typename>'어셈블리 또는 모듈'에서<name>' 실패
 ms.date: 07/20/2015
 f1_keywords:
 - bc31091
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31091
 ms.assetid: 84b4a407-32d3-4697-88ae-13485d834a1f
-ms.openlocfilehash: 6b932aab5ef1f613a6387c9cdaf680a18d4815e6
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 9c2643ef884838c44c32831b0700089d608c2101
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54645381"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55257384"
 ---
-# <a name="import-of-type-lttypenamegt-from-assembly-or-module-ltnamegt-failed"></a><span data-ttu-id="d47fb-102">형식의 가져오기 '&lt;typename&gt;'어셈블리 또는 모듈의 ' from&lt;이름&gt;' 실패</span><span class="sxs-lookup"><span data-stu-id="d47fb-102">Import of type '&lt;typename&gt;' from assembly or module '&lt;name&gt;' failed</span></span>
-<span data-ttu-id="d47fb-103">참조된 모든 라이브러리가 서로 호환되는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="d47fb-103">Make sure that all referenced libraries are compatible with each other.</span></span>  
+# <a name="import-of-type-typename-from-assembly-or-module-name-failed"></a><span data-ttu-id="87c1a-102">가져오기 형식 '\<typename >' 어셈블리 또는 모듈에서 '\<이름 >' 실패</span><span class="sxs-lookup"><span data-stu-id="87c1a-102">Import of type '\<typename>' from assembly or module '\<name>' failed</span></span>
+<span data-ttu-id="87c1a-103">참조된 모든 라이브러리가 서로 호환되는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="87c1a-103">Make sure that all referenced libraries are compatible with each other.</span></span>  
   
- <span data-ttu-id="d47fb-104">**오류 ID:** BC31091</span><span class="sxs-lookup"><span data-stu-id="d47fb-104">**Error ID:** BC31091</span></span>  
+ <span data-ttu-id="87c1a-104">**오류 ID:** BC31091</span><span class="sxs-lookup"><span data-stu-id="87c1a-104">**Error ID:** BC31091</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d47fb-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d47fb-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="87c1a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="87c1a-105">To correct this error</span></span>  
   
--   <span data-ttu-id="d47fb-106">참조된 형식을 포함하는 파일이 손상되지 않았는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="d47fb-106">Verify that the files containing the referenced type are not corrupt.</span></span>  
+-   <span data-ttu-id="87c1a-106">참조된 형식을 포함하는 파일이 손상되지 않았는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="87c1a-106">Verify that the files containing the referenced type are not corrupt.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d47fb-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="d47fb-107">See also</span></span>
-- [<span data-ttu-id="d47fb-108">Imports 문(.NET 네임스페이스 및 형식)</span><span class="sxs-lookup"><span data-stu-id="d47fb-108">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
-- [<span data-ttu-id="d47fb-109">참조 및 Imports 문</span><span class="sxs-lookup"><span data-stu-id="d47fb-109">References and the Imports Statement</span></span>](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
+## <a name="see-also"></a><span data-ttu-id="87c1a-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="87c1a-107">See also</span></span>
+- [<span data-ttu-id="87c1a-108">Imports 문(.NET 네임스페이스 및 형식)</span><span class="sxs-lookup"><span data-stu-id="87c1a-108">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [<span data-ttu-id="87c1a-109">참조 및 Imports 문</span><span class="sxs-lookup"><span data-stu-id="87c1a-109">References and the Imports Statement</span></span>](../../visual-basic/programming-guide/program-structure/references-and-the-imports-statement.md)
