--- a/docs/visual-basic/misc/bc42310.md
+++ b/docs/visual-basic/misc/bc42310.md
@@ -1,5 +1,5 @@
 ---
-title: "'Include' 있어야 하는 XML 주석 태그는 '&lt;특성&gt;' 특성"
+title: "'Include' 있어야 하는 XML 주석 태그는 '<attribute>' 특성"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42310
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC42310
 ms.assetid: b3c377d6-401a-477e-8f2d-b2881f2818a9
-ms.openlocfilehash: 6b01a8f23f810f0d1f4c496404dc6e9a00d1a699
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 52396325601560c55d1392f8d47f98bb9ca230f1
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54579435"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55274510"
 ---
-# <a name="xml-comment-tag-include-must-have-a-ltattributegt-attribute"></a><span data-ttu-id="71af6-102">'Include' 있어야 하는 XML 주석 태그는 '&lt;특성&gt;' 특성</span><span class="sxs-lookup"><span data-stu-id="71af6-102">XML comment tag 'include' must have a '&lt;attribute&gt;' attribute</span></span>
-<span data-ttu-id="71af6-103">XML 주석 태그 'i' 있어야를 \<특성 > 특성입니다.</span><span class="sxs-lookup"><span data-stu-id="71af6-103">XML comment tag 'include' must have a \<attribute> attribute.</span></span> <span data-ttu-id="71af6-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="71af6-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-tag-include-must-have-a-attribute-attribute"></a><span data-ttu-id="b018d-102">'Include' 있어야 하는 XML 주석 태그는 '\<특성 >' 특성</span><span class="sxs-lookup"><span data-stu-id="b018d-102">XML comment tag 'include' must have a '\<attribute>' attribute</span></span>
+<span data-ttu-id="b018d-103">XML 주석 태그 'i' 있어야를 \<특성 > 특성입니다.</span><span class="sxs-lookup"><span data-stu-id="b018d-103">XML comment tag 'include' must have a \<attribute> attribute.</span></span> <span data-ttu-id="b018d-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="b018d-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="71af6-105">`file` include `path` 태그로 전달되는 `<`또는`>` 특성이 누락되었거나 불완전합니다.</span><span class="sxs-lookup"><span data-stu-id="71af6-105">A `file` or `path` attribute, passed to the `<`include`>` tag, was missing or incomplete.</span></span>  
+ <span data-ttu-id="b018d-105">`file` include `path` 태그로 전달되는 `<`또는`>` 특성이 누락되었거나 불완전합니다.</span><span class="sxs-lookup"><span data-stu-id="b018d-105">A `file` or `path` attribute, passed to the `<`include`>` tag, was missing or incomplete.</span></span>  
   
- <span data-ttu-id="71af6-106">**오류 ID:** BC42310</span><span class="sxs-lookup"><span data-stu-id="71af6-106">**Error ID:** BC42310</span></span>  
+ <span data-ttu-id="b018d-106">**오류 ID:** BC42310</span><span class="sxs-lookup"><span data-stu-id="b018d-106">**Error ID:** BC42310</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="71af6-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="71af6-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b018d-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b018d-107">To correct this error</span></span>  
   
--   <span data-ttu-id="71af6-108">추가 하거나 필요한 특성을 완성 된 \<포함 > 태그입니다.</span><span class="sxs-lookup"><span data-stu-id="71af6-108">Add or complete the required attribute to the \<include> tag.</span></span>  
+-   <span data-ttu-id="b018d-108">추가 하거나 필요한 특성을 완성 된 \<포함 > 태그입니다.</span><span class="sxs-lookup"><span data-stu-id="b018d-108">Add or complete the required attribute to the \<include> tag.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="71af6-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="71af6-109">See also</span></span>
-- [<span data-ttu-id="71af6-110">\<include></span><span class="sxs-lookup"><span data-stu-id="71af6-110">\<include></span></span>](../../visual-basic/language-reference/xmldoc/include.md)
-- [<span data-ttu-id="71af6-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="71af6-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+## <a name="see-also"></a><span data-ttu-id="b018d-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="b018d-109">See also</span></span>
+- [<span data-ttu-id="b018d-110">\<include></span><span class="sxs-lookup"><span data-stu-id="b018d-110">\<include></span></span>](../../visual-basic/language-reference/xmldoc/include.md)
+- [<span data-ttu-id="b018d-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="b018d-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
