commit translated contents

--- a/docs/visual-basic/misc/bc31082.md
+++ b/docs/visual-basic/misc/bc31082.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;variablename&gt;' 지역 변수 또는 매개 변수를 아니며 'Catch' 변수로 사용할 수 없습니다"
+title: "'<variablename>' 지역 변수 또는 매개 변수를 아니며 'Catch' 변수로 사용할 수 없습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - bc31082
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31082
 ms.assetid: de197563-5848-4c1a-a519-cc4b5ea9a4c9
-ms.openlocfilehash: e7e646cb7f4eaa867d0ca25d29e3e52aa73ad604
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c6a06ea0bb5d9e28fb953135fa7a1c0ecccca185
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54511552"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264494"
 ---
-# <a name="ltvariablenamegt-is-not-a-local-variable-or-parameter-and-so-cannot-be-used-as-a-catch-variable"></a>'&lt;variablename&gt;' 지역 변수 또는 매개 변수를 아니며 'Catch' 변수로 사용할 수 없습니다
+# <a name="variablename-is-not-a-local-variable-or-parameter-and-so-cannot-be-used-as-a-catch-variable"></a>'\<variablename >' 지역 변수 또는 매개 변수를 아니며 'Catch' 변수로 사용할 수 없습니다
 `Try...Catch...Finally` 문의 변수는 로컬로 선언되어야 하며 현재 프로시저의 매개 변수여야 합니다.  
   
  **오류 ID:** BC31082  
