--- a/docs/visual-basic/misc/bc30547.md
+++ b/docs/visual-basic/misc/bc30547.md
@@ -1,5 +1,5 @@
 ---
-title: 인터페이스 '&lt;interfacename&gt;' 기본 속성이 없으므로 인덱싱할 수 없습니다
+title: 인터페이스 '<interfacename>' 기본 속성이 없으므로 인덱싱할 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - bc30547
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30547
 ms.assetid: d9d83868-5e81-4ec5-878e-2303489d8f2f
-ms.openlocfilehash: d6f1b916b7def7015106ef341c302f1bbe2fdfca
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 9fc0eff60f6fce0c2f1c2856598f85a52468f929
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54678709"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258112"
 ---
-# <a name="interface-ltinterfacenamegt-cannot-be-indexed-because-it-has-no-default-property"></a>인터페이스 '&lt;interfacename&gt;' 기본 속성이 없으므로 인덱싱할 수 없습니다
+# <a name="interface-interfacename-cannot-be-indexed-because-it-has-no-default-property"></a>인터페이스 '\<interfacename >' 기본 속성이 없으므로 인덱싱할 수 없습니다
 인덱스 식은 배열 형식의 값, 해당 형식에 오버로드된 기본 속성 집합이 있는 값 또는 오버로드된 속성 집합이어야 합니다. 인터페이스는 기본 메서드 또는 속성을 하나만 가질 수 있습니다. 즉, 기본 메서드 또는 속성을 포함하는 인터페이스를 상속하거나 해당 정의 블록에 기본으로 표시된 메서드 또는 속성을 하나 포함할 수 있습니다.  
   
  **오류 ID:** BC30547  
