--- a/docs/visual-basic/misc/bc30751.md
+++ b/docs/visual-basic/misc/bc30751.md
@@ -1,5 +1,5 @@
 ---
-title: 에 대 한 형식 정보를 가져올 수 없습니다. '&lt;typename&gt;'
+title: 에 대 한 형식 정보를 가져올 수 없습니다. '<typename>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30751
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30751
 ms.assetid: 000478d8-376f-49cd-86bc-2f901c7530f7
-ms.openlocfilehash: 71d10cafb9e1354867fe72ab7eebf62f96b53982
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a85142691a9d0ac340f86be894cfc59efd20f950
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54534033"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261336"
 ---
-# <a name="unable-to-get-type-information-for-lttypenamegt"></a>에 대 한 형식 정보를 가져올 수 없습니다. '&lt;typename&gt;'
+# <a name="unable-to-get-type-information-for-typename"></a>에 대 한 형식 정보를 가져올 수 없습니다. '\<typename >'
 공용 언어 런타임에 의해 로드되지 않은 형식이 참조되었습니다.  
   
  **오류 ID:** BC30751  
