--- a/docs/visual-basic/misc/bc32117.md
+++ b/docs/visual-basic/misc/bc32117.md
@@ -1,5 +1,5 @@
 ---
-title: 없는 액세스할 수 있는 제네릭이 아닌 '&lt;procedurename&gt;' 찾을 수
+title: 없는 액세스할 수 있는 제네릭이 아닌 '<procedurename>' 찾을 수
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32117
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32117
 ms.assetid: a7bf8b67-8a0a-499e-9992-dc00e09b7ff4
-ms.openlocfilehash: b587a5d2bb89d47adfc7a9948834eb81ba880723
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 1f0b811ff50c4440b1b63980581003e29cd06bc2
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54566894"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261371"
 ---
-# <a name="no-accessible-non-generic-ltprocedurenamegt-found"></a>없는 액세스할 수 있는 제네릭이 아닌 '&lt;procedurename&gt;' 찾을 수
+# <a name="no-accessible-non-generic-procedurename-found"></a>없는 액세스할 수 있는 제네릭이 아닌 '\<procedurename >' 찾을 수
 문에서 오버로드된 버전이 둘 이상 있는 프로시저를 호출하지만 모든 오버로드 버전이 제네릭이고 호출에서 형식 인수를 제공하지 않습니다.  
   
  제네릭 버전이 하나뿐이고 형식 인수 없이 호출하는 경우 컴파일러에서 *형식 유추*를 시도할 수 있습니다. 자세한 내용은 [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)의 "형식 유추"를 참조하세요. 그러나 제네릭 버전이 여러 개인 경우 형식 인수를 제공하지 않으면 컴파일러에서 그중 하나를 선택할 수 없습니다. 형식 인수를 하나 제공한 경우 모든 형식 매개 변수에 대해 오버로드 버전에서 정의한 형식 인수를 제공해야 합니다.  
