--- a/docs/visual-basic/misc/bc33014.md
+++ b/docs/visual-basic/misc/bc33014.md
@@ -1,5 +1,5 @@
 ---
-title: 연산자 '&lt;연산자&gt;' 매개 변수가 하나 있어야 합니다.
+title: 연산자 '<operator>' 매개 변수가 하나 있어야 합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc33014
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33014
 ms.assetid: 512a5724-a6c5-4437-a608-7d6b10e68d49
-ms.openlocfilehash: d57a7dd056cc301abcf97c6088a910d1e555b3e9
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 59f44ff0acc94b0257311a9915a04cabb98b196a
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54506513"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261050"
 ---
-# <a name="operator-ltoperatorgt-must-have-one-parameter"></a>연산자 '&lt;연산자&gt;' 매개 변수가 하나 있어야 합니다.
+# <a name="operator-operator-must-have-one-parameter"></a>연산자 '\<연산자 >' 매개 변수가 하나 있어야 합니다.
 단항 연산자는 둘 이상의 매개 변수 또는 매개 변수 없이 정의됩니다.  
   
  단항 연산자에는 한 개의 매개 변수만 사용할 수 있습니다.  
