--- a/docs/visual-basic/misc/bc33021.md
+++ b/docs/visual-basic/misc/bc33021.md
@@ -1,5 +1,5 @@
 ---
-title: 이 이항 연산자의 하나 이상의 매개 변수 형식은 포함 하는 형식 이어야 합니다. '&lt;typename&gt;'
+title: 이 이항 연산자의 하나 이상의 매개 변수 형식은 포함 하는 형식 이어야 합니다. '<typename>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc33021
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC33021
 ms.assetid: 934d4d2e-d368-46d7-819e-5571cdc0ce4f
-ms.openlocfilehash: 4603bfdc6f7957ee4154ee2d4f162a7b7eddf3bd
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 912fe27c3b4034651bc9be36efe331d43ea108cc
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54681653"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55260816"
 ---
-# <a name="at-least-one-parameter-type-of-this-binary-operator-must-be-the-containing-type-lttypenamegt"></a>이 이항 연산자의 하나 이상의 매개 변수 형식은 포함 하는 형식 이어야 합니다. '&lt;typename&gt;'
+# <a name="at-least-one-parameter-type-of-this-binary-operator-must-be-the-containing-type-typename"></a>이 이항 연산자의 하나 이상의 매개 변수 형식은 포함 하는 형식 이어야 합니다. '\<typename >'
 이항 연산자의 정의가 해당 연산자가 정의된 클래스 또는 구조체의 형식이 아닌 형식을 사용하여 두 매개 변수를 지정합니다.  
   
  클래스 또는 구조체에서 연산자를 정의할 때 매개 변수 중 하나 이상은 해당 클래스 또는 구조체의 형식이어야 합니다.  
