--- a/docs/visual-basic/misc/bc42203.md
+++ b/docs/visual-basic/misc/bc42203.md
@@ -1,5 +1,5 @@
 ---
-title: 프로젝트 '&lt;projectname&gt;'버전에 대 한 참조가 필요 합니다.'&lt;versionnumber1&gt;'의 어셈블리'&lt;assemblyname&gt;', 참조 버전 '&lt; versionnumber2&gt;'의 어셈블리'&lt;assemblyname&gt;' (Visual Basic 경고)
+title: 프로젝트 '<projectname>'버전에 대 한 참조가 필요 합니다.'<versionnumber1>'의 어셈블리'<assemblyname>', 참조 버전 '<versionnumber2>어셈블리' '의<assemblyname>' (Visual Basic 경고)
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42203
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42203
 ms.assetid: 26a3fa34-ec5d-4817-a947-3959446a924a
-ms.openlocfilehash: c0e4b7a1264918c055048dbedfa44068bfca537d
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 47e3165fb285ab8a79b3a1b87d1362b9d778c106
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54596035"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55257446"
 ---
-# <a name="project-ltprojectnamegt-requires-a-reference-to-version-ltversionnumber1gt-of-assembly-ltassemblynamegt-but-references-version-ltversionnumber2gt-of-assembly-ltassemblynamegt-visual-basic-warning"></a>프로젝트 '&lt;projectname&gt;'버전에 대 한 참조가 필요 합니다.'&lt;versionnumber1&gt;'의 어셈블리'&lt;assemblyname&gt;', 참조 버전 '&lt; versionnumber2&gt;'의 어셈블리'&lt;assemblyname&gt;' (Visual Basic 경고)
+# <a name="project-projectname-requires-a-reference-to-version-versionnumber1-of-assembly-assemblyname-but-references-version-versionnumber2-of-assembly-assemblyname-visual-basic-warning"></a>프로젝트 '\<프로젝트 이름 >' 버전에 대 한 참조가 필요 '\<versionnumber1 >' 어셈블리의 '\<assemblyname >', 참조 버전 '\<versionnumber2 >' 어셈블리의 '\< assemblyname >' (Visual Basic 경고)
 프로젝트 '\<프로젝트 이름 >' 버전에 대 한 참조가 필요 '\<versionnumber1 >' 어셈블리의 '\<assemblyname >', 참조 버전 '\<versionnumber2 >' 어셈블리의 '\< assemblyname >'입니다. 버전에 대 한 참조가 '\<versionnumber1 >' 내보내집니다.  
   
  프로젝트가 다른 곳에서 정의된 어셈블리를 간접적으로 참조하지만 해당 프로젝트가 해당 어셈블리의 이전 버전을 직접적으로 참조하기도 합니다.  
