commit bilingual contents

--- a/docs/visual-basic/misc/bc33021.md
+++ b/docs/visual-basic/misc/bc33021.md
@@ -1,5 +1,5 @@
 ---
-title: 이 이항 연산자의 하나 이상의 매개 변수 형식은 포함 하는 형식 이어야 합니다. '&lt;typename&gt;'
+title: 이 이항 연산자의 하나 이상의 매개 변수 형식은 포함 하는 형식 이어야 합니다. '<typename>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc33021
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC33021
 ms.assetid: 934d4d2e-d368-46d7-819e-5571cdc0ce4f
-ms.openlocfilehash: 4603bfdc6f7957ee4154ee2d4f162a7b7eddf3bd
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 912fe27c3b4034651bc9be36efe331d43ea108cc
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54681653"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55260816"
 ---
-# <a name="at-least-one-parameter-type-of-this-binary-operator-must-be-the-containing-type-lttypenamegt"></a><span data-ttu-id="5e2de-102">이 이항 연산자의 하나 이상의 매개 변수 형식은 포함 하는 형식 이어야 합니다. '&lt;typename&gt;'</span><span class="sxs-lookup"><span data-stu-id="5e2de-102">At least one parameter type of this binary operator must be the containing type '&lt;typename&gt;'</span></span>
-<span data-ttu-id="5e2de-103">이항 연산자의 정의가 해당 연산자가 정의된 클래스 또는 구조체의 형식이 아닌 형식을 사용하여 두 매개 변수를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="5e2de-103">A definition of a binary operator specifies both parameters with types other than that of the class or structure in which the operator is defined.</span></span>  
+# <a name="at-least-one-parameter-type-of-this-binary-operator-must-be-the-containing-type-typename"></a><span data-ttu-id="6f55d-102">이 이항 연산자의 하나 이상의 매개 변수 형식은 포함 하는 형식 이어야 합니다. '\<typename >'</span><span class="sxs-lookup"><span data-stu-id="6f55d-102">At least one parameter type of this binary operator must be the containing type '\<typename>'</span></span>
+<span data-ttu-id="6f55d-103">이항 연산자의 정의가 해당 연산자가 정의된 클래스 또는 구조체의 형식이 아닌 형식을 사용하여 두 매개 변수를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="6f55d-103">A definition of a binary operator specifies both parameters with types other than that of the class or structure in which the operator is defined.</span></span>  
   
- <span data-ttu-id="5e2de-104">클래스 또는 구조체에서 연산자를 정의할 때 매개 변수 중 하나 이상은 해당 클래스 또는 구조체의 형식이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="5e2de-104">When you define an operator in a class or structure, at least one of the parameters must be of the type of that class or structure.</span></span>  
+ <span data-ttu-id="6f55d-104">클래스 또는 구조체에서 연산자를 정의할 때 매개 변수 중 하나 이상은 해당 클래스 또는 구조체의 형식이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6f55d-104">When you define an operator in a class or structure, at least one of the parameters must be of the type of that class or structure.</span></span>  
   
- <span data-ttu-id="5e2de-105">**오류 ID:** BC33021</span><span class="sxs-lookup"><span data-stu-id="5e2de-105">**Error ID:** BC33021</span></span>  
+ <span data-ttu-id="6f55d-105">**오류 ID:** BC33021</span><span class="sxs-lookup"><span data-stu-id="6f55d-105">**Error ID:** BC33021</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5e2de-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5e2de-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6f55d-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6f55d-106">To correct this error</span></span>  
   
--   <span data-ttu-id="5e2de-107">매개 변수 하나 또는 두 형식 모두를 연산자가 정의된 클래스 또는 구조체의 형식으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="5e2de-107">Change the type of one or both of the parameters to the type of the class or structure in which the operator is defined.</span></span>  
+-   <span data-ttu-id="6f55d-107">매개 변수 하나 또는 두 형식 모두를 연산자가 정의된 클래스 또는 구조체의 형식으로 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="6f55d-107">Change the type of one or both of the parameters to the type of the class or structure in which the operator is defined.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5e2de-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="5e2de-108">See also</span></span>
-- [<span data-ttu-id="5e2de-109">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="5e2de-109">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="5e2de-110">Operator 문</span><span class="sxs-lookup"><span data-stu-id="5e2de-110">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="5e2de-111">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="5e2de-111">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="5e2de-112">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="5e2de-112">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="6f55d-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="6f55d-108">See also</span></span>
+- [<span data-ttu-id="6f55d-109">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="6f55d-109">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="6f55d-110">Operator 문</span><span class="sxs-lookup"><span data-stu-id="6f55d-110">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="6f55d-111">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="6f55d-111">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="6f55d-112">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="6f55d-112">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
