--- a/docs/visual-basic/misc/bc30547.md
+++ b/docs/visual-basic/misc/bc30547.md
@@ -1,5 +1,5 @@
 ---
-title: 인터페이스 '&lt;interfacename&gt;' 기본 속성이 없으므로 인덱싱할 수 없습니다
+title: 인터페이스 '<interfacename>' 기본 속성이 없으므로 인덱싱할 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - bc30547
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30547
 ms.assetid: d9d83868-5e81-4ec5-878e-2303489d8f2f
-ms.openlocfilehash: d6f1b916b7def7015106ef341c302f1bbe2fdfca
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 9fc0eff60f6fce0c2f1c2856598f85a52468f929
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54678709"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55258112"
 ---
-# <a name="interface-ltinterfacenamegt-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="534cd-102">인터페이스 '&lt;interfacename&gt;' 기본 속성이 없으므로 인덱싱할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="534cd-102">Interface '&lt;interfacename&gt;' cannot be indexed because it has no default property</span></span>
-<span data-ttu-id="534cd-103">인덱스 식은 배열 형식의 값, 해당 형식에 오버로드된 기본 속성 집합이 있는 값 또는 오버로드된 속성 집합이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="534cd-103">Index expressions must result in a value whose type is an array, in a value whose type has a set of overloaded default properties, or in a set of overloaded properties.</span></span> <span data-ttu-id="534cd-104">인터페이스는 기본 메서드 또는 속성을 하나만 가질 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="534cd-104">An interface can have only one default method or property.</span></span> <span data-ttu-id="534cd-105">즉, 기본 메서드 또는 속성을 포함하는 인터페이스를 상속하거나 해당 정의 블록에 기본으로 표시된 메서드 또는 속성을 하나 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="534cd-105">This means that it can either inherit an interface containing a default method or property, or its definition block can contain one method or property that is marked as default.</span></span>  
+# <a name="interface-interfacename-cannot-be-indexed-because-it-has-no-default-property"></a><span data-ttu-id="619e7-102">인터페이스 '\<interfacename >' 기본 속성이 없으므로 인덱싱할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="619e7-102">Interface '\<interfacename>' cannot be indexed because it has no default property</span></span>
+<span data-ttu-id="619e7-103">인덱스 식은 배열 형식의 값, 해당 형식에 오버로드된 기본 속성 집합이 있는 값 또는 오버로드된 속성 집합이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="619e7-103">Index expressions must result in a value whose type is an array, in a value whose type has a set of overloaded default properties, or in a set of overloaded properties.</span></span> <span data-ttu-id="619e7-104">인터페이스는 기본 메서드 또는 속성을 하나만 가질 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="619e7-104">An interface can have only one default method or property.</span></span> <span data-ttu-id="619e7-105">즉, 기본 메서드 또는 속성을 포함하는 인터페이스를 상속하거나 해당 정의 블록에 기본으로 표시된 메서드 또는 속성을 하나 포함할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="619e7-105">This means that it can either inherit an interface containing a default method or property, or its definition block can contain one method or property that is marked as default.</span></span>  
   
- <span data-ttu-id="534cd-106">**오류 ID:** BC30547</span><span class="sxs-lookup"><span data-stu-id="534cd-106">**Error ID:** BC30547</span></span>  
+ <span data-ttu-id="619e7-106">**오류 ID:** BC30547</span><span class="sxs-lookup"><span data-stu-id="619e7-106">**Error ID:** BC30547</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="534cd-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="534cd-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="619e7-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="619e7-107">To correct this error</span></span>  
   
--   <span data-ttu-id="534cd-108">인터페이스의 기본 속성을 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="534cd-108">Supply a default property in the interface.</span></span>  
+-   <span data-ttu-id="619e7-108">인터페이스의 기본 속성을 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="619e7-108">Supply a default property in the interface.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="534cd-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="534cd-109">See also</span></span>
-- [<span data-ttu-id="534cd-110">Interface 문</span><span class="sxs-lookup"><span data-stu-id="534cd-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+## <a name="see-also"></a><span data-ttu-id="619e7-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="619e7-109">See also</span></span>
+- [<span data-ttu-id="619e7-110">Interface 문</span><span class="sxs-lookup"><span data-stu-id="619e7-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
