--- a/docs/visual-basic/misc/bc30751.md
+++ b/docs/visual-basic/misc/bc30751.md
@@ -1,5 +1,5 @@
 ---
-title: 에 대 한 형식 정보를 가져올 수 없습니다. '&lt;typename&gt;'
+title: 에 대 한 형식 정보를 가져올 수 없습니다. '<typename>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30751
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC30751
 ms.assetid: 000478d8-376f-49cd-86bc-2f901c7530f7
-ms.openlocfilehash: 71d10cafb9e1354867fe72ab7eebf62f96b53982
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a85142691a9d0ac340f86be894cfc59efd20f950
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54534033"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261336"
 ---
-# <a name="unable-to-get-type-information-for-lttypenamegt"></a><span data-ttu-id="e8262-102">에 대 한 형식 정보를 가져올 수 없습니다. '&lt;typename&gt;'</span><span class="sxs-lookup"><span data-stu-id="e8262-102">Unable to get type information for '&lt;typename&gt;'</span></span>
-<span data-ttu-id="e8262-103">공용 언어 런타임에 의해 로드되지 않은 형식이 참조되었습니다.</span><span class="sxs-lookup"><span data-stu-id="e8262-103">A type was referenced that has not been loaded by the common language runtime.</span></span>  
+# <a name="unable-to-get-type-information-for-typename"></a><span data-ttu-id="4c0e3-102">에 대 한 형식 정보를 가져올 수 없습니다. '\<typename >'</span><span class="sxs-lookup"><span data-stu-id="4c0e3-102">Unable to get type information for '\<typename>'</span></span>
+<span data-ttu-id="4c0e3-103">공용 언어 런타임에 의해 로드되지 않은 형식이 참조되었습니다.</span><span class="sxs-lookup"><span data-stu-id="4c0e3-103">A type was referenced that has not been loaded by the common language runtime.</span></span>  
   
- <span data-ttu-id="e8262-104">**오류 ID:** BC30751</span><span class="sxs-lookup"><span data-stu-id="e8262-104">**Error ID:** BC30751</span></span>  
+ <span data-ttu-id="4c0e3-104">**오류 ID:** BC30751</span><span class="sxs-lookup"><span data-stu-id="4c0e3-104">**Error ID:** BC30751</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e8262-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="e8262-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4c0e3-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4c0e3-105">To correct this error</span></span>  
   
--   <span data-ttu-id="e8262-106">현재 범위 내에서 형식이 정의되도록 코드를 재구성합니다.</span><span class="sxs-lookup"><span data-stu-id="e8262-106">Restructure your code so the type is defined within the current scope.</span></span>  
+-   <span data-ttu-id="4c0e3-106">현재 범위 내에서 형식이 정의되도록 코드를 재구성합니다.</span><span class="sxs-lookup"><span data-stu-id="4c0e3-106">Restructure your code so the type is defined within the current scope.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e8262-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="e8262-107">See also</span></span>
-- [<span data-ttu-id="e8262-108">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="e8262-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
+## <a name="see-also"></a><span data-ttu-id="4c0e3-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="4c0e3-107">See also</span></span>
+- [<span data-ttu-id="4c0e3-108">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="4c0e3-108">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
