--- a/docs/visual-basic/misc/bc31082.md
+++ b/docs/visual-basic/misc/bc31082.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;variablename&gt;' 지역 변수 또는 매개 변수를 아니며 'Catch' 변수로 사용할 수 없습니다"
+title: "'<variablename>' 지역 변수 또는 매개 변수를 아니며 'Catch' 변수로 사용할 수 없습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - bc31082
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC31082
 ms.assetid: de197563-5848-4c1a-a519-cc4b5ea9a4c9
-ms.openlocfilehash: e7e646cb7f4eaa867d0ca25d29e3e52aa73ad604
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c6a06ea0bb5d9e28fb953135fa7a1c0ecccca185
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54511552"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264494"
 ---
-# <a name="ltvariablenamegt-is-not-a-local-variable-or-parameter-and-so-cannot-be-used-as-a-catch-variable"></a><span data-ttu-id="90a7b-102">'&lt;variablename&gt;' 지역 변수 또는 매개 변수를 아니며 'Catch' 변수로 사용할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="90a7b-102">'&lt;variablename&gt;' is not a local variable or parameter, and so cannot be used as a 'Catch' variable</span></span>
-<span data-ttu-id="90a7b-103">`Try...Catch...Finally` 문의 변수는 로컬로 선언되어야 하며 현재 프로시저의 매개 변수여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="90a7b-103">Variables in `Try...Catch...Finally` statements must be declared locally, or be parameters for the current procedure.</span></span>  
+# <a name="variablename-is-not-a-local-variable-or-parameter-and-so-cannot-be-used-as-a-catch-variable"></a><span data-ttu-id="fab58-102">'\<variablename >' 지역 변수 또는 매개 변수를 아니며 'Catch' 변수로 사용할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="fab58-102">'\<variablename>' is not a local variable or parameter, and so cannot be used as a 'Catch' variable</span></span>
+<span data-ttu-id="fab58-103">`Try...Catch...Finally` 문의 변수는 로컬로 선언되어야 하며 현재 프로시저의 매개 변수여야 합니다.</span><span class="sxs-lookup"><span data-stu-id="fab58-103">Variables in `Try...Catch...Finally` statements must be declared locally, or be parameters for the current procedure.</span></span>  
   
- <span data-ttu-id="90a7b-104">**오류 ID:** BC31082</span><span class="sxs-lookup"><span data-stu-id="90a7b-104">**Error ID:** BC31082</span></span>  
+ <span data-ttu-id="fab58-104">**오류 ID:** BC31082</span><span class="sxs-lookup"><span data-stu-id="fab58-104">**Error ID:** BC31082</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="90a7b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="90a7b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fab58-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fab58-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="90a7b-106">`Try...Catch...Finally` 문의 지역 변수 또는 매개 변수를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="90a7b-106">Declare local variables or parameters for `Try...Catch...Finally` statements.</span></span>  
+1.  <span data-ttu-id="fab58-106">`Try...Catch...Finally` 문의 지역 변수 또는 매개 변수를 선언합니다.</span><span class="sxs-lookup"><span data-stu-id="fab58-106">Declare local variables or parameters for `Try...Catch...Finally` statements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="90a7b-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="90a7b-107">See also</span></span>
-- [<span data-ttu-id="90a7b-108">Try...Catch...Finally 문</span><span class="sxs-lookup"><span data-stu-id="90a7b-108">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
+## <a name="see-also"></a><span data-ttu-id="fab58-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="fab58-107">See also</span></span>
+- [<span data-ttu-id="fab58-108">Try...Catch...Finally 문</span><span class="sxs-lookup"><span data-stu-id="fab58-108">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
