--- a/docs/visual-basic/misc/bc42203.md
+++ b/docs/visual-basic/misc/bc42203.md
@@ -1,5 +1,5 @@
 ---
-title: 프로젝트 '&lt;projectname&gt;'버전에 대 한 참조가 필요 합니다.'&lt;versionnumber1&gt;'의 어셈블리'&lt;assemblyname&gt;', 참조 버전 '&lt; versionnumber2&gt;'의 어셈블리'&lt;assemblyname&gt;' (Visual Basic 경고)
+title: 프로젝트 '<projectname>'버전에 대 한 참조가 필요 합니다.'<versionnumber1>'의 어셈블리'<assemblyname>', 참조 버전 '<versionnumber2>어셈블리' '의<assemblyname>' (Visual Basic 경고)
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42203
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC42203
 ms.assetid: 26a3fa34-ec5d-4817-a947-3959446a924a
-ms.openlocfilehash: c0e4b7a1264918c055048dbedfa44068bfca537d
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 47e3165fb285ab8a79b3a1b87d1362b9d778c106
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54596035"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55257446"
 ---
-# <a name="project-ltprojectnamegt-requires-a-reference-to-version-ltversionnumber1gt-of-assembly-ltassemblynamegt-but-references-version-ltversionnumber2gt-of-assembly-ltassemblynamegt-visual-basic-warning"></a><span data-ttu-id="99d38-102">프로젝트 '&lt;projectname&gt;'버전에 대 한 참조가 필요 합니다.'&lt;versionnumber1&gt;'의 어셈블리'&lt;assemblyname&gt;', 참조 버전 '&lt; versionnumber2&gt;'의 어셈블리'&lt;assemblyname&gt;' (Visual Basic 경고)</span><span class="sxs-lookup"><span data-stu-id="99d38-102">Project '&lt;projectname&gt;' requires a reference to version '&lt;versionnumber1&gt;' of assembly '&lt;assemblyname&gt;', but references version '&lt;versionnumber2&gt;' of assembly '&lt;assemblyname&gt;' (Visual Basic Warning)</span></span>
-<span data-ttu-id="99d38-103">프로젝트 '\<프로젝트 이름 >' 버전에 대 한 참조가 필요 '\<versionnumber1 >' 어셈블리의 '\<assemblyname >', 참조 버전 '\<versionnumber2 >' 어셈블리의 '\< assemblyname >'입니다.</span><span class="sxs-lookup"><span data-stu-id="99d38-103">Project '\<projectname>' requires a reference to version '\<versionnumber1>' of assembly '\<assemblyname>', but references version '\<versionnumber2>' of assembly '\<assemblyname>'.</span></span> <span data-ttu-id="99d38-104">버전에 대 한 참조가 '\<versionnumber1 >' 내보내집니다.</span><span class="sxs-lookup"><span data-stu-id="99d38-104">Reference to version '\<versionnumber1>' emitted.</span></span>  
+# <a name="project-projectname-requires-a-reference-to-version-versionnumber1-of-assembly-assemblyname-but-references-version-versionnumber2-of-assembly-assemblyname-visual-basic-warning"></a><span data-ttu-id="c2b3d-102">프로젝트 '\<프로젝트 이름 >' 버전에 대 한 참조가 필요 '\<versionnumber1 >' 어셈블리의 '\<assemblyname >', 참조 버전 '\<versionnumber2 >' 어셈블리의 '\< assemblyname >' (Visual Basic 경고)</span><span class="sxs-lookup"><span data-stu-id="c2b3d-102">Project '\<projectname>' requires a reference to version '\<versionnumber1>' of assembly '\<assemblyname>', but references version '\<versionnumber2>' of assembly '\<assemblyname>' (Visual Basic Warning)</span></span>
+<span data-ttu-id="c2b3d-103">프로젝트 '\<프로젝트 이름 >' 버전에 대 한 참조가 필요 '\<versionnumber1 >' 어셈블리의 '\<assemblyname >', 참조 버전 '\<versionnumber2 >' 어셈블리의 '\< assemblyname >'입니다.</span><span class="sxs-lookup"><span data-stu-id="c2b3d-103">Project '\<projectname>' requires a reference to version '\<versionnumber1>' of assembly '\<assemblyname>', but references version '\<versionnumber2>' of assembly '\<assemblyname>'.</span></span> <span data-ttu-id="c2b3d-104">버전에 대 한 참조가 '\<versionnumber1 >' 내보내집니다.</span><span class="sxs-lookup"><span data-stu-id="c2b3d-104">Reference to version '\<versionnumber1>' emitted.</span></span>  
   
- <span data-ttu-id="99d38-105">프로젝트가 다른 곳에서 정의된 어셈블리를 간접적으로 참조하지만 해당 프로젝트가 해당 어셈블리의 이전 버전을 직접적으로 참조하기도 합니다.</span><span class="sxs-lookup"><span data-stu-id="99d38-105">A project makes an indirect reference to an assembly that is defined elsewhere, but the project also has a direct reference to an earlier version of that assembly.</span></span>  
+ <span data-ttu-id="c2b3d-105">프로젝트가 다른 곳에서 정의된 어셈블리를 간접적으로 참조하지만 해당 프로젝트가 해당 어셈블리의 이전 버전을 직접적으로 참조하기도 합니다.</span><span class="sxs-lookup"><span data-stu-id="c2b3d-105">A project makes an indirect reference to an assembly that is defined elsewhere, but the project also has a direct reference to an earlier version of that assembly.</span></span>  
   
- <span data-ttu-id="99d38-106">이전 버전이 아닌 이후 버전에서 정의된 형식 및 프로그래밍 요소에 대한 액세스를 수용하기 위해 컴파일러는 액세스를 확인할 때 이후 버전에 대한 간접 참조를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="99d38-106">To accommodate access to types and programming elements defined in the later version but not in the earlier version, the compiler uses the indirect reference to the later version when resolving accesses.</span></span>  
+ <span data-ttu-id="c2b3d-106">이전 버전이 아닌 이후 버전에서 정의된 형식 및 프로그래밍 요소에 대한 액세스를 수용하기 위해 컴파일러는 액세스를 확인할 때 이후 버전에 대한 간접 참조를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="c2b3d-106">To accommodate access to types and programming elements defined in the later version but not in the earlier version, the compiler uses the indirect reference to the later version when resolving accesses.</span></span>  
   
- <span data-ttu-id="99d38-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="99d38-107">By default, this message is a warning.</span></span> <span data-ttu-id="99d38-108">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="99d38-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="c2b3d-107">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="c2b3d-107">By default, this message is a warning.</span></span> <span data-ttu-id="c2b3d-108">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="c2b3d-108">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="99d38-109">**오류 ID:** BC42203</span><span class="sxs-lookup"><span data-stu-id="99d38-109">**Error ID:** BC42203</span></span>  
+ <span data-ttu-id="c2b3d-109">**오류 ID:** BC42203</span><span class="sxs-lookup"><span data-stu-id="c2b3d-109">**Error ID:** BC42203</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="99d38-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="99d38-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c2b3d-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c2b3d-110">To correct this error</span></span>  
   
--   <span data-ttu-id="99d38-111">이전 버전의 어셈블리에 대한 직접 참조를 제거하거나 이후 버전을 참조하도록 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="99d38-111">Remove the direct reference to the earlier version of the assembly, or change it to refer to the later version.</span></span>  
+-   <span data-ttu-id="c2b3d-111">이전 버전의 어셈블리에 대한 직접 참조를 제거하거나 이후 버전을 참조하도록 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="c2b3d-111">Remove the direct reference to the earlier version of the assembly, or change it to refer to the later version.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="99d38-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="99d38-112">See also</span></span>
-- [<span data-ttu-id="99d38-113">공용 언어 런타임의 어셈블리</span><span class="sxs-lookup"><span data-stu-id="99d38-113">Assemblies in the Common Language Runtime</span></span>](../../framework/app-domains/assemblies-in-the-common-language-runtime.md)
+## <a name="see-also"></a><span data-ttu-id="c2b3d-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="c2b3d-112">See also</span></span>
+- [<span data-ttu-id="c2b3d-113">공용 언어 런타임의 어셈블리</span><span class="sxs-lookup"><span data-stu-id="c2b3d-113">Assemblies in the Common Language Runtime</span></span>](../../framework/app-domains/assemblies-in-the-common-language-runtime.md)
 
-- [<span data-ttu-id="99d38-114">프로젝트의 참조 관리</span><span class="sxs-lookup"><span data-stu-id="99d38-114">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)
+- [<span data-ttu-id="c2b3d-114">프로젝트의 참조 관리</span><span class="sxs-lookup"><span data-stu-id="c2b3d-114">Managing references in a project</span></span>](/visualstudio/ide/managing-references-in-a-project)
 
 
