commit translated contents

--- a/docs/visual-basic/misc/bc30266.md
+++ b/docs/visual-basic/misc/bc30266.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;declaration1&gt;'를 재정의할 수 없습니다'&lt;declaration2&gt;' 액세스 수준이 서로 달라 있기 때문에"
+title: "'<declaration1>'를 재정의할 수 없습니다'<declaration2>' 액세스 수준이 서로 달라 있기 때문에"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30266
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30266
 ms.assetid: c9c5c14e-876c-430d-ab98-5087c19efae7
-ms.openlocfilehash: 0818ed4415c89a1c203f313d1782d13c63dfc59d
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: e8c804bb1e219d6ea687b9799fd47dedd722cf02
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54654349"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55263958"
 ---
-# <a name="ltdeclaration1gt-cannot-override-ltdeclaration2gt-because-they-have-different-access-levels"></a>'&lt;declaration1&gt;'를 재정의할 수 없습니다'&lt;declaration2&gt;' 액세스 수준이 서로 달라 있기 때문에
+# <a name="declaration1-cannot-override-declaration2-because-they-have-different-access-levels"></a>'\<declaration1 >'를 재정의할 수 없습니다 '\<declaration2 >' 액세스 수준이 서로 달라 있기 때문에
 프로시저나 속성 선언이 동일한 이름의 상속된 요소를 재정의하려고 하지만 상속된 요소와 다른 접근성을 지정합니다. 재정의할 때 `Public` 또는 `Private`와 같은 상속된 요소의 접근성을 유지해야 합니다.  
   
  **오류 ID:** BC30266  
