--- a/docs/visual-basic/misc/bc30281.md
+++ b/docs/visual-basic/misc/bc30281.md
@@ -1,5 +1,5 @@
 ---
-title: 구조 '&lt;structurename&gt;' 하나 이상의 인스턴스 멤버 변수 또는 이벤트 선언이 있어야
+title: 구조 '<structurename>' 하나 이상의 인스턴스 멤버 변수 또는 이벤트 선언이 있어야
 ms.date: 07/20/2015
 f1_keywords:
 - bc30281
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30281
 ms.assetid: a03ee4e2-5fea-4933-898f-7f125b25824e
-ms.openlocfilehash: 4bbc64b5a063e94cebb85d84a62d3f164e822b77
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: dbbdd02a86ce1c24276ad3305e7829e1711855f9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54543005"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266504"
 ---
-# <a name="structure-ltstructurenamegt-must-contain-at-least-one-instance-member-variable-or-event-declaration"></a>구조 '&lt;structurename&gt;' 하나 이상의 인스턴스 멤버 변수 또는 이벤트 선언이 있어야
+# <a name="structure-structurename-must-contain-at-least-one-instance-member-variable-or-event-declaration"></a>구조 '\<structurename >' 하나 이상의 인스턴스 멤버 변수 또는 이벤트 선언이 있어야
 기능적으로 빈 구조체가 발생합니다. 하나 이상의 변수 멤버가 `Structure` 문과 `End Structure` 문 사이에 선언되어야 합니다.  
   
  **오류 ID:** BC30281  
