--- a/docs/visual-basic/misc/bc30792.md
+++ b/docs/visual-basic/misc/bc30792.md
@@ -1,5 +1,5 @@
 ---
-title: "'TryCast' 피연산자는 참조 형식 이어야 하지만 '&lt;typename&gt;'는 값 형식"
+title: "'TryCast' 피연산자는 참조 형식 이어야 하지만 '<typename>'는 값 형식"
 ms.date: 07/20/2015
 f1_keywords:
 - BC30792
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30792
 ms.assetid: 3325fce5-dbc0-4d1d-9530-31f4720bfe6e
-ms.openlocfilehash: d36f6615c095e8a46f718a5c9477defc269e937c
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 581a8da49908fae00d41b92aa4f791c21f34a17d
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54518035"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266525"
 ---
-# <a name="trycast-operand-must-be-reference-type-but-lttypenamegt-is-a-value-type"></a>'TryCast' 피연산자는 참조 형식 이어야 하지만 '&lt;typename&gt;'는 값 형식
+# <a name="trycast-operand-must-be-reference-type-but-typename-is-a-value-type"></a>'TryCast' 피연산자는 참조 형식 이어야 하지만 '\<typename >'은 값 형식
 인수 중 하나 이상에 대해 `TryCast` 연산자가 값 형식과 함께 사용됩니다.  
   
  `TryCast` 는 두 인수 간의 상속 또는 구현 관계를 테스트합니다. 따라서 인수에는 참조 형식만 사용할 수 있습니다. 자세한 내용은 [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)을 참조하세요.  
