--- a/docs/visual-basic/misc/bc30797.md
+++ b/docs/visual-basic/misc/bc30797.md
@@ -1,5 +1,5 @@
 ---
-title: "프로젝트 수준의 가져오기 하는 동안 오류가 발생 했습니다. '&lt;qualifiedelementname&gt;'에 at'&lt;qualifiedcontainername&gt;': &lt;errormessage&gt;"
+title: 프로젝트 수준의 가져오기 하는 동안 오류가 발생 했습니다. '<qualifiedelementname>'에서'<qualifiedcontainername>'. <errormessage>
 ms.date: 07/20/2015
 f1_keywords:
 - BC30797
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30797
 ms.assetid: 529f354f-f255-4adc-ab21-bd1796e58d69
-ms.openlocfilehash: ddad21185cd230bf798b9aa8818a896c41aeae0a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 04c9857f905efc84da3f7603fa0b5477058b26dc
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54577610"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261310"
 ---
-# <a name="error-in-project-level-import-ltqualifiedelementnamegt-at-ltqualifiedcontainernamegt--lterrormessagegt"></a>프로젝트 수준의 가져오기 하는 동안 오류가 발생 했습니다. '&lt;qualifiedelementname&gt;'에 at'&lt;qualifiedcontainername&gt;': &lt;errormessage&gt;
+# <a name="error-in-project-level-import-qualifiedelementname-at-qualifiedcontainername--errormessage"></a>프로젝트 수준의 가져오기 하는 동안 오류가 발생 했습니다. '\<qualifiedelementname >'에서 '\<qualifiedcontainername >': \<errormessage >
 다른 어셈블리에 정의된 프로그래밍 요소를 문에서 액세스하지만 해당 어셈블리에 대한 프로젝트 참조가 없습니다.  
   
  예를 들어 코드에서 한정 문자열 `desiredEnumeration` 을 사용하여 `otherNamespace.otherClass.desiredEnumeration`라는 열거형에 액세스할 수 있습니다. 컴파일러가 프로젝트 참조에서 `otherNamespace.otherClass` 를 찾을 수 없는 경우 이 오류가 생성됩니다.  
