--- a/docs/visual-basic/misc/bc31430.md
+++ b/docs/visual-basic/misc/bc31430.md
@@ -1,5 +1,5 @@
 ---
-title: 형식의 식은 '&lt;typename1&gt;'형식일 수 없습니다 수'&lt;typename2&gt;'
+title: 형식의 식은 '<typename1>'형식일 수 없습니다 수'<typename2>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31430
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31430
 ms.assetid: 1d527033-3f6f-4945-b1d3-5ef59a1e1b53
-ms.openlocfilehash: f4c63dd24b2de27d374c94a05a454ceb2725e951
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c9f770150d48d0ea8fe725de8d8af0e454046c90
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54594492"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264166"
 ---
-# <a name="expression-of-type-lttypename1gt-can-never-be-of-type-lttypename2gt"></a>형식의 식은 '&lt;typename1&gt;'형식일 수 없습니다 수'&lt;typename2&gt;'
+# <a name="expression-of-type-typename1-can-never-be-of-type-typename2"></a>형식의 식은 '\<typename1 >' 형식이 될 수 없습니다 '\<typename2 >'
 `TypeOf`...`Is` 식은 유지할 수 없는 데이터 형식에 대한 개체 참조 변수를 테스트합니다.  
   
  일부 경우 컴파일러에서 `TypeOf`...`Is` 테스트는 실패만 할 수 있다고 결정할 수 있습니다(예: 두 클래스 간의 상속 관계가 없는 경우).  
