--- a/docs/visual-basic/misc/bc36625.md
+++ b/docs/visual-basic/misc/bc36625.md
@@ -1,5 +1,5 @@
 ---
-title: 람다 식을 변환할 수 없는 '&lt;typename&gt;'하므로'&lt;typename&gt;' 대리자 형식이 아닌
+title: 람다 식을 변환할 수 없는 '<typename>'하므로'<typename>' 대리자 형식이 아닌
 ms.date: 07/20/2015
 f1_keywords:
 - bc36625
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36625
 ms.assetid: c03634d4-d831-4f8c-b6ab-566465968e4d
-ms.openlocfilehash: be965c73f03e22bdfab0514dc0fb9277739614cd
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: fbdfd970981b0b5e6d06262a8779ffa8d116488a
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54718437"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55263786"
 ---
-# <a name="lambda-expression-cannot-be-converted-to-lttypenamegt-because-lttypenamegt-is-not-a-delegate-type"></a>람다 식을 변환할 수 없는 '&lt;typename&gt;'하므로'&lt;typename&gt;' 대리자 형식이 아닌
+# <a name="lambda-expression-cannot-be-converted-to-typename-because-typename-is-not-a-delegate-type"></a>람다 식을 변환할 수 없는 '\<typename >' 때문에 '\<typename >' 대리자 형식이 아닌
 람다 식은 대리자가 유효한 위치에서 사용할 수 있습니다. 호환되는 대리자 형식으로 변환할 수 있지만 다른 형식으로는 변환할 수 없습니다. 예를 들어 대리자 형식을 정의한 다음 여기에 람다 식을 할당하거나, 람다 식을 인수로 <xref:System.Func%601> 매개 변수에 보낼 수 있습니다. 이러한 예제가 다음 코드에 표시됩니다.  
   
 ```vb  
