--- a/docs/visual-basic/misc/bc30503.md
+++ b/docs/visual-basic/misc/bc30503.md
@@ -1,5 +1,5 @@
 ---
-title: 모듈의 속성을 선언할 수 없습니다. '&lt;지정자&gt;'
+title: 모듈의 속성을 선언할 수 없습니다 '<specifier>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30503
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30503
 ms.assetid: a8fc4ce5-425f-4aad-9c77-95893baddcc1
-ms.openlocfilehash: bb5dcb4c207076a496e000cfecbf505831f21943
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 196034c65142a27dee99f0279e50e2b7cd454189
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54575936"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261635"
 ---
-# <a name="properties-in-a-module-cannot-be-declared-ltspecifiergt"></a>모듈의 속성을 선언할 수 없습니다. '&lt;지정자&gt;'
+# <a name="properties-in-a-module-cannot-be-declared-specifier"></a>모듈의 속성을 선언할 수 없습니다 '\<지정자 >'
 모듈 내의 속성에서 `MustOverride`, `NotOverridable`또는 `Overridable`등의 지정자를 사용하려고 했습니다.  
   
  **오류 ID:** BC30503  
