--- a/docs/visual-basic/misc/bc30659.md
+++ b/docs/visual-basic/misc/bc30659.md
@@ -1,5 +1,5 @@
 ---
-title: 속성 또는 필드 '&lt;이름을&gt;' 특성 형식이 잘못 되지 않은
+title: 속성 또는 필드 '<name>' 특성 형식이 잘못 되지 않은
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30659
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30659
 ms.assetid: aca34cd1-ea8a-4a29-9e36-a999dfe0742e
-ms.openlocfilehash: e7eaac2df41a00e988a6f6e785459f8725d17189
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 559d6b09adf64bbd56b2e8bebb6f1c5ccf33e611
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54524452"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261388"
 ---
-# <a name="property-or-field-ltnamegt-does-not-have-a-valid-attribute-type"></a>속성 또는 필드 '&lt;이름을&gt;' 특성 형식이 잘못 되지 않은
+# <a name="property-or-field-name-does-not-have-a-valid-attribute-type"></a>속성 또는 필드 '\<이름 >' 특성 형식이 잘못 되지 않은
 있습니다 특성은 다른 적절 한 생성자를 사용할 수 있지만 유효한 특성 형식에 사용할 수 없는 특성 생성자를 사용할 수 있습니다.  
   
  **오류 ID:** BC30659  
