--- a/docs/visual-basic/misc/bc30919.md
+++ b/docs/visual-basic/misc/bc30919.md
@@ -1,5 +1,5 @@
 ---
-title: 때문에이 ' Sub n e '의 첫째 문은 'MyBase.New' 또는 'm y'에 대 한 명시적 호출 이어야 합니다는 '&lt;constructorname&gt;'에서 기본 클래스'&lt;baseclassname&gt;'의'&lt;derivedclassname &gt;' obsolete로 표시 되어 있습니다.
+title: 때문에이 ' Sub n e '의 첫째 문은 'MyBase.New' 또는 'm y'에 대 한 명시적 호출 이어야 합니다는 '<constructorname>'에서 기본 클래스'<baseclassname>'의'<derivedclassname>' obsolete로 표시 되어 있습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30919
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30919
 ms.assetid: 437e3204-8ddc-45d3-b9b4-c66d53a61a6d
-ms.openlocfilehash: 73882e3adbce668ca30d8e0f64ae4965bca38561
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 1a98c90ad935a2552787e8e34c33b759681b54b3
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767566"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264140"
 ---
-# <a name="first-statement-of-this-sub-new-must-be-an-explicit-call-to-mybasenew-or-myclassnew-because-the-ltconstructornamegt-in-the-base-class-ltbaseclassnamegt-of-ltderivedclassnamegt-is-marked-obsolete"></a>때문에이 ' Sub n e '의 첫째 문은 'MyBase.New' 또는 'm y'에 대 한 명시적 호출 이어야 합니다는 '&lt;constructorname&gt;'에서 기본 클래스'&lt;baseclassname&gt;'의'&lt;derivedclassname &gt;' obsolete로 표시 되어 있습니다.
+# <a name="first-statement-of-this-sub-new-must-be-an-explicit-call-to-mybasenew-or-myclassnew-because-the-constructorname-in-the-base-class-baseclassname-of-derivedclassname-is-marked-obsolete"></a>때문에이 ' Sub n e '의 첫째 문은 'MyBase.New' 또는 'm y'에 대 한 명시적 호출 이어야 합니다는 '\<constructorname >' 기본 클래스 '\<baseclassname >'의 '\<derivedclassname >' obsolete로 표시 되어 있습니다.
 클래스 생성자는 기본 클래스 생성자를 명시적으로 호출하지 않으며, 암시적 기본 클래스 생성자가 <xref:System.ObsoleteAttribute> 특성 및 지시문으로 표시되어 오류로 처리합니다.  
   
  파생된 클래스 생성자는 기본 클래스 생성자를 호출 하지 않으면 Visual Basic에서는 매개 변수가 없는 기본 클래스 생성자에 대 한 암시적 호출을 생성 하려고 합니다. 인수 없이 호출할 수 있는 기본 클래스에 액세스할 수 있는 생성자가 없습니다 있으면 Visual Basic에서 암시적 호출을 생성할 수 없습니다. 이 경우 필요한 생성자는 기본적으로 <xref:System.ObsoleteAttribute> 특성을 사용 하므로 Visual Basic에서 호출할 수 없습니다.  
