--- a/docs/visual-basic/misc/bc30930.md
+++ b/docs/visual-basic/misc/bc30930.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;이름을&gt;' 필요한이 구문을 컴파일하 찾을 수 없습니다"
+title: "'<name>' 필요한이 구문을 컴파일하 찾을 수 없습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30930
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30930
 ms.assetid: 95d8380b-3d08-4898-819d-e8b9c85b3c83
-ms.openlocfilehash: 1a140b2e333ac60649b4c0455bf7fd9690bf40c0
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c71e46c27d07e3c823e762fb96318ea87ea0cb04
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54507098"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264221"
 ---
-# <a name="ltnamegt-necessary-for-compiling-this-construct-cannot-be-found"></a>'&lt;이름을&gt;' 필요한이 구문을 컴파일하 찾을 수 없습니다
+# <a name="name-necessary-for-compiling-this-construct-cannot-be-found"></a>'\<이름 >', 필요한이 구문을 컴파일하 찾을 수 없습니다
 컴파일에 필요한 요소를 찾을 수 없습니다.  
   
  **오류 ID:** BC30930  
