--- a/docs/visual-basic/misc/bc31165.md
+++ b/docs/visual-basic/misc/bc31165.md
@@ -1,5 +1,5 @@
 ---
-title: 필요한 시작 '&lt;' XML 태그
+title: XML 태그에 시작 '<'가 필요합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31165
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31165
 ms.assetid: d6c411f3-06be-4647-a18a-8ff8a24ff94b
-ms.openlocfilehash: 2b361810a40748626cf66598af4cb492278ed27f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 6e2ec4d56294d984c6e419b910e870f146831712
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54503090"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55263747"
 ---
-# <a name="expected-beginning-lt-for-an-xml-tag"></a>필요한 시작 '&lt;' XML 태그
+# <a name="expected-beginning--for-an-xml-tag"></a>필요한 시작 '\<' XML 태그
 XML 리터럴의 XML 태그에 필요한 시작 '<' 문자가 없습니다.  
   
  **오류 ID:** BC31165  
