--- a/docs/visual-basic/misc/bc32000.md
+++ b/docs/visual-basic/misc/bc32000.md
@@ -1,5 +1,5 @@
 ---
-title: 지역 변수 '&lt;variablename&gt;'는 선언에 참조할 수 없습니다
+title: 지역 변수 '<variablename>'는 선언에 참조할 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32000
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32000
 ms.assetid: 81e2bbe3-8b8a-4bf7-b344-08489d50ef6e
-ms.openlocfilehash: 190e8b81e2a6c97df430f9950e27067c5968c192
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: f3ee8d35e4ffeaa1c579231971e6f667aeabf782
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54559881"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55269200"
 ---
-# <a name="local-variable-ltvariablenamegt-cannot-be-referred-to-before-it-is-declared"></a>지역 변수 '&lt;variablename&gt;'는 선언에 참조할 수 없습니다
+# <a name="local-variable-variablename-cannot-be-referred-to-before-it-is-declared"></a>지역 변수 '\<variablename >'는 선언에 참조할 수 없습니다
 프로시저 내의 변수가 선언 전에 사용됩니다.  
   
  **오류 ID:** BC32000  
