--- a/docs/visual-basic/misc/bc32110.md
+++ b/docs/visual-basic/misc/bc32110.md
@@ -1,5 +1,5 @@
 ---
-title: 제약 조건 '&lt;constraint1&gt;'간접 제약 조건 충돌'&lt;constraint2&gt;'형식 매개 변수 제약 조건에서 가져온'&lt;typeparameter1&gt;'
+title: 제약 조건 '<constraint1>'충돌할 간접 제약 조건'<constraint2>'형식 매개 변수 제약 조건에서 가져온'<typeparameter1>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc32110
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32110
 ms.assetid: e799214d-23b4-4a3f-b61a-0b9d3387ead3
-ms.openlocfilehash: d36bebc602d2e89081c770694ad6f96afe6fbb8e
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 19b1be163f7b33eb44c274abbbbfa743640e7ef9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54502968"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261765"
 ---
-# <a name="constraint-ltconstraint1gt-conflicts-with-the-indirect-constraint-ltconstraint2gt-obtained-from-the-type-parameter-constraint-lttypeparameter1gt"></a>제약 조건 '&lt;constraint1&gt;'간접 제약 조건 충돌'&lt;constraint2&gt;'형식 매개 변수 제약 조건에서 가져온'&lt;typeparameter1&gt;'
+# <a name="constraint-constraint1-conflicts-with-the-indirect-constraint-constraint2-obtained-from-the-type-parameter-constraint-typeparameter1"></a>제약 조건 '\<constraint1 >' 간접 제약 조건 충돌 '\<constraint2 >' 형식 매개 변수 제약 조건에서 가져온 '\<typeparameter1 >'
 제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.  
   
  다음 문은 이 오류를 생성할 수 있습니다.  
