--- a/docs/visual-basic/misc/bc36016.md
+++ b/docs/visual-basic/misc/bc36016.md
@@ -1,5 +1,5 @@
 ---
-title: 암시적 변수가 '&lt;variablename&gt;'올바르지 때문 에'&lt;메시지&gt;'
+title: 암시적 변수가 '<variablename>'올바르지 때문 에'<message>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36016
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36016
 ms.assetid: 0b834480-7202-4d3c-a841-46b763c7ebf2
-ms.openlocfilehash: 843bfd93cab5402e8dedea821e99c92ba4aa3b7f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 8d0c02b814d74c8ef027f0d1ea7079d85d365bc2
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54521906"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266543"
 ---
-# <a name="implicit-variable-ltvariablenamegt-is-invalid-because-of-ltmessagegt"></a>암시적 변수가 '&lt;variablename&gt;'올바르지 때문 에'&lt;메시지&gt;'
+# <a name="implicit-variable-variablename-is-invalid-because-of-message"></a>암시적 변수가 '\<variablename >' 때문에 올바르지 않습니다 '\<메시지 >'
 디버그하는 동안 잘못된 암시적 변수가 생성되었습니다.  
   
  **오류 ID:** BC36016  
