--- a/docs/visual-basic/misc/bc36649-bc36646.md
+++ b/docs/visual-basic/misc/bc36649-bc36646.md
@@ -1,5 +1,5 @@
 ---
-title: 확장 메서드에서 형식 매개 변수의 데이터 형식을 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'이 인수에서 유추할 수 없습니다.
+title: 확장 메서드에서 형식 매개 변수의 데이터 형식을 '<methodname>'에 정의 된'<typename>'이 인수에서 유추할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc36649
@@ -10,14 +10,14 @@ helpviewer_keywords:
 - BC36649
 - BC36646
 ms.assetid: 55274b01-6d78-4950-861e-07d9273ef76e
-ms.openlocfilehash: 4c50910a9e4bdd85229fe3f4e4cfc3ac00e55714
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 70d2daeab1c328ca587819141ee15494df242a47
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54536206"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266600"
 ---
-# <a name="data-types-of-the-type-parameters-in-extension-method-ltmethodnamegt-defined-in-lttypenamegt-cannot-be-inferred-from-these-arguments"></a>확장 메서드에서 형식 매개 변수의 데이터 형식을 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'이 인수에서 유추할 수 없습니다.
+# <a name="data-types-of-the-type-parameters-in-extension-method-methodname-defined-in-typename-cannot-be-inferred-from-these-arguments"></a>확장 메서드에서 형식 매개 변수의 데이터 형식을 '\<methodname >'에 정의 된 '\<typename >'이 인수에서 유추할 수 없습니다.
 확장 메서드에서 형식 매개 변수의 데이터 형식을 '\<methodname >'에 정의 된 '\<typename >'이 인수에서 유추할 수 없습니다. 데이터 형식을 명시적으로 지정하면 이 오류를 해결할 수 있습니다.  
   
  제네릭 확장 메서드에 대한 호출을 평가할 때 형식 유추를 사용하여 형식 매개 변수의 데이터 형식을 확인하려고 했습니다. 그러나 이 메서드에서 형식 매개 변수에 대한 데이터 형식을 찾을 수 없어 오류가 보고되었습니다.  
