--- a/docs/visual-basic/misc/bc42016.md
+++ b/docs/visual-basic/misc/bc42016.md
@@ -1,5 +1,5 @@
 ---
-title: 암시적 변환에서 '&lt;typename1&gt;'to'&lt;typename2&gt;'
+title: 암시적 변환에서 '<typename1>'에'<typename2>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42016
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42016
 ms.assetid: 7dabaab0-8258-4c17-927f-28e61f50bd3a
-ms.openlocfilehash: a9822d352187e9f362bdaa2fc3d64ef404f0510c
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 696b0c76383ff91f5c5abe12ffd7eb543981aad0
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54578655"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261401"
 ---
-# <a name="implicit-conversion-from-lttypename1gt-to-lttypename2gt"></a>암시적 변환에서 '&lt;typename1&gt;'to'&lt;typename2&gt;'
+# <a name="implicit-conversion-from-typename1-to-typename2"></a>암시적 변환에서 '\<typename1 >'에 '\<typename2 >'
 식 또는 대입문이 한 데이터 형식의 값을 받아서 다른 형식으로 변환합니다. 변환 키워드를 사용하지 않으므로 변환은 *암시적*입니다.  
   
  이 메시지는 기본적으로 경고입니다. 경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.  
