commit bilingual contents

--- a/docs/visual-basic/misc/bc30930.md
+++ b/docs/visual-basic/misc/bc30930.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;이름을&gt;' 필요한이 구문을 컴파일하 찾을 수 없습니다"
+title: "'<name>' 필요한이 구문을 컴파일하 찾을 수 없습니다"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30930
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30930
 ms.assetid: 95d8380b-3d08-4898-819d-e8b9c85b3c83
-ms.openlocfilehash: 1a140b2e333ac60649b4c0455bf7fd9690bf40c0
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c71e46c27d07e3c823e762fb96318ea87ea0cb04
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54507098"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264221"
 ---
-# <a name="ltnamegt-necessary-for-compiling-this-construct-cannot-be-found"></a><span data-ttu-id="419fa-102">'&lt;이름을&gt;' 필요한이 구문을 컴파일하 찾을 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="419fa-102">'&lt;name&gt;', necessary for compiling this construct, cannot be found</span></span>
-<span data-ttu-id="419fa-103">컴파일에 필요한 요소를 찾을 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="419fa-103">An element necessary for compilation cannot be found.</span></span>  
+# <a name="name-necessary-for-compiling-this-construct-cannot-be-found"></a><span data-ttu-id="0cdc2-102">'\<이름 >', 필요한이 구문을 컴파일하 찾을 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="0cdc2-102">'\<name>', necessary for compiling this construct, cannot be found</span></span>
+<span data-ttu-id="0cdc2-103">컴파일에 필요한 요소를 찾을 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="0cdc2-103">An element necessary for compilation cannot be found.</span></span>  
   
- <span data-ttu-id="419fa-104">**오류 ID:** BC30930</span><span class="sxs-lookup"><span data-stu-id="419fa-104">**Error ID:** BC30930</span></span>  
+ <span data-ttu-id="0cdc2-104">**오류 ID:** BC30930</span><span class="sxs-lookup"><span data-stu-id="0cdc2-104">**Error ID:** BC30930</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="419fa-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="419fa-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0cdc2-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="0cdc2-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="419fa-106">필요한 도우미 요소를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="419fa-106">Supply the necessary helper element.</span></span>  
+1.  <span data-ttu-id="0cdc2-106">필요한 도우미 요소를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="0cdc2-106">Supply the necessary helper element.</span></span>  
   
-2.  <span data-ttu-id="419fa-107">코드가 올바른 관리 코드인지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="419fa-107">Make sure the code is valid managed code.</span></span>  
+2.  <span data-ttu-id="0cdc2-107">코드가 올바른 관리 코드인지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="0cdc2-107">Make sure the code is valid managed code.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="419fa-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="419fa-108">See also</span></span>
-- [<span data-ttu-id="419fa-109">관리되는 실행 프로세스</span><span class="sxs-lookup"><span data-stu-id="419fa-109">Managed Execution Process</span></span>](../../standard/managed-execution-process.md)
+## <a name="see-also"></a><span data-ttu-id="0cdc2-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="0cdc2-108">See also</span></span>
+- [<span data-ttu-id="0cdc2-109">관리되는 실행 프로세스</span><span class="sxs-lookup"><span data-stu-id="0cdc2-109">Managed Execution Process</span></span>](../../standard/managed-execution-process.md)
