--- a/docs/visual-basic/misc/bc31430.md
+++ b/docs/visual-basic/misc/bc31430.md
@@ -1,5 +1,5 @@
 ---
-title: 형식의 식은 '&lt;typename1&gt;'형식일 수 없습니다 수'&lt;typename2&gt;'
+title: 형식의 식은 '<typename1>'형식일 수 없습니다 수'<typename2>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31430
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - BC31430
 ms.assetid: 1d527033-3f6f-4945-b1d3-5ef59a1e1b53
-ms.openlocfilehash: f4c63dd24b2de27d374c94a05a454ceb2725e951
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c9f770150d48d0ea8fe725de8d8af0e454046c90
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54594492"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264166"
 ---
-# <a name="expression-of-type-lttypename1gt-can-never-be-of-type-lttypename2gt"></a><span data-ttu-id="297f8-102">형식의 식은 '&lt;typename1&gt;'형식일 수 없습니다 수'&lt;typename2&gt;'</span><span class="sxs-lookup"><span data-stu-id="297f8-102">Expression of type '&lt;typename1&gt;' can never be of type '&lt;typename2&gt;'</span></span>
-<span data-ttu-id="297f8-103">`TypeOf`...`Is` 식은 유지할 수 없는 데이터 형식에 대한 개체 참조 변수를 테스트합니다.</span><span class="sxs-lookup"><span data-stu-id="297f8-103">A `TypeOf`...`Is` expression tests an object reference variable to a data type that it cannot hold.</span></span>  
+# <a name="expression-of-type-typename1-can-never-be-of-type-typename2"></a><span data-ttu-id="5f588-102">형식의 식은 '\<typename1 >' 형식이 될 수 없습니다 '\<typename2 >'</span><span class="sxs-lookup"><span data-stu-id="5f588-102">Expression of type '\<typename1>' can never be of type '\<typename2>'</span></span>
+<span data-ttu-id="5f588-103">`TypeOf`...`Is` 식은 유지할 수 없는 데이터 형식에 대한 개체 참조 변수를 테스트합니다.</span><span class="sxs-lookup"><span data-stu-id="5f588-103">A `TypeOf`...`Is` expression tests an object reference variable to a data type that it cannot hold.</span></span>  
   
- <span data-ttu-id="297f8-104">일부 경우 컴파일러에서 `TypeOf`...`Is` 테스트는 실패만 할 수 있다고 결정할 수 있습니다(예: 두 클래스 간의 상속 관계가 없는 경우).</span><span class="sxs-lookup"><span data-stu-id="297f8-104">In some cases the compiler can determine that a `TypeOf`...`Is` test can only fail, for example if there is no inheritance relationship between two classes.</span></span>  
+ <span data-ttu-id="5f588-104">일부 경우 컴파일러에서 `TypeOf`...`Is` 테스트는 실패만 할 수 있다고 결정할 수 있습니다(예: 두 클래스 간의 상속 관계가 없는 경우).</span><span class="sxs-lookup"><span data-stu-id="5f588-104">In some cases the compiler can determine that a `TypeOf`...`Is` test can only fail, for example if there is no inheritance relationship between two classes.</span></span>  
   
- <span data-ttu-id="297f8-105">다음 코드에서는 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="297f8-105">The following code can generate this error.</span></span>  
+ <span data-ttu-id="5f588-105">다음 코드에서는 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5f588-105">The following code can generate this error.</span></span>  
   
  `Dim refVar as System.Windows.Forms.Form`  
   
@@ -27,14 +27,14 @@ ms.locfileid: "54594492"
   
  `End If`  
   
- <span data-ttu-id="297f8-106"><xref:System.Windows.Forms.Form> 과 <xref:System.Array> 는 전혀 관련이 없는 형식이기 때문에 컴파일러가 `TypeOf`...`Is` 식이 `False` 의 값에 대해 `refVar`를 반환한다는 것을 결정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="297f8-106">Because <xref:System.Windows.Forms.Form> and <xref:System.Array> are totally unrelated types, the compiler can determine that the `TypeOf`...`Is` expression returns `False` for any value of `refVar`.</span></span>  
+ <span data-ttu-id="5f588-106"><xref:System.Windows.Forms.Form> 과 <xref:System.Array> 는 전혀 관련이 없는 형식이기 때문에 컴파일러가 `TypeOf`...`Is` 식이 `False` 의 값에 대해 `refVar`를 반환한다는 것을 결정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5f588-106">Because <xref:System.Windows.Forms.Form> and <xref:System.Array> are totally unrelated types, the compiler can determine that the `TypeOf`...`Is` expression returns `False` for any value of `refVar`.</span></span>  
   
- <span data-ttu-id="297f8-107">**오류 ID:** BC31430</span><span class="sxs-lookup"><span data-stu-id="297f8-107">**Error ID:** BC31430</span></span>  
+ <span data-ttu-id="5f588-107">**오류 ID:** BC31430</span><span class="sxs-lookup"><span data-stu-id="5f588-107">**Error ID:** BC31430</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="297f8-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="297f8-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5f588-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5f588-108">To correct this error</span></span>  
   
--   <span data-ttu-id="297f8-109">실제 데이터 형식에 대한 변수를 테스트하거나 `TypeOf`...`Is` 테스트를 완전히 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="297f8-109">Test the variable for a realistic data type, or remove the `TypeOf`...`Is` test altogether.</span></span>  
+-   <span data-ttu-id="5f588-109">실제 데이터 형식에 대한 변수를 테스트하거나 `TypeOf`...`Is` 테스트를 완전히 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="5f588-109">Test the variable for a realistic data type, or remove the `TypeOf`...`Is` test altogether.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="297f8-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="297f8-110">See also</span></span>
-- [<span data-ttu-id="297f8-111">TypeOf 연산자</span><span class="sxs-lookup"><span data-stu-id="297f8-111">TypeOf Operator</span></span>](../../visual-basic/language-reference/operators/typeof-operator.md)
-- [<span data-ttu-id="297f8-112">방법: 개체 변수가 참조 하는 형식 확인</span><span class="sxs-lookup"><span data-stu-id="297f8-112">How to: Determine What Type an Object Variable Refers To</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-what-type-an-object-variable-refers-to.md)
+## <a name="see-also"></a><span data-ttu-id="5f588-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="5f588-110">See also</span></span>
+- [<span data-ttu-id="5f588-111">TypeOf 연산자</span><span class="sxs-lookup"><span data-stu-id="5f588-111">TypeOf Operator</span></span>](../../visual-basic/language-reference/operators/typeof-operator.md)
+- [<span data-ttu-id="5f588-112">방법: 개체 변수가 참조 하는 형식 확인</span><span class="sxs-lookup"><span data-stu-id="5f588-112">How to: Determine What Type an Object Variable Refers To</span></span>](../../visual-basic/programming-guide/language-features/variables/how-to-determine-what-type-an-object-variable-refers-to.md)
