--- a/docs/visual-basic/misc/bc30281.md
+++ b/docs/visual-basic/misc/bc30281.md
@@ -1,5 +1,5 @@
 ---
-title: 구조 '&lt;structurename&gt;' 하나 이상의 인스턴스 멤버 변수 또는 이벤트 선언이 있어야
+title: 구조 '<structurename>' 하나 이상의 인스턴스 멤버 변수 또는 이벤트 선언이 있어야
 ms.date: 07/20/2015
 f1_keywords:
 - bc30281
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30281
 ms.assetid: a03ee4e2-5fea-4933-898f-7f125b25824e
-ms.openlocfilehash: 4bbc64b5a063e94cebb85d84a62d3f164e822b77
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: dbbdd02a86ce1c24276ad3305e7829e1711855f9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54543005"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266504"
 ---
-# <a name="structure-ltstructurenamegt-must-contain-at-least-one-instance-member-variable-or-event-declaration"></a><span data-ttu-id="c15d8-102">구조 '&lt;structurename&gt;' 하나 이상의 인스턴스 멤버 변수 또는 이벤트 선언이 있어야</span><span class="sxs-lookup"><span data-stu-id="c15d8-102">Structure '&lt;structurename&gt;' must contain at least one instance member variable or Event declaration</span></span>
-<span data-ttu-id="c15d8-103">기능적으로 빈 구조체가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="c15d8-103">A functionally empty structure occurs.</span></span> <span data-ttu-id="c15d8-104">하나 이상의 변수 멤버가 `Structure` 문과 `End Structure` 문 사이에 선언되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="c15d8-104">At least one variable member must be declared between the `Structure` statement and the `End Structure` statement.</span></span>  
+# <a name="structure-structurename-must-contain-at-least-one-instance-member-variable-or-event-declaration"></a><span data-ttu-id="aef20-102">구조 '\<structurename >' 하나 이상의 인스턴스 멤버 변수 또는 이벤트 선언이 있어야</span><span class="sxs-lookup"><span data-stu-id="aef20-102">Structure '\<structurename>' must contain at least one instance member variable or Event declaration</span></span>
+<span data-ttu-id="aef20-103">기능적으로 빈 구조체가 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="aef20-103">A functionally empty structure occurs.</span></span> <span data-ttu-id="aef20-104">하나 이상의 변수 멤버가 `Structure` 문과 `End Structure` 문 사이에 선언되어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="aef20-104">At least one variable member must be declared between the `Structure` statement and the `End Structure` statement.</span></span>  
   
- <span data-ttu-id="c15d8-105">**오류 ID:** BC30281</span><span class="sxs-lookup"><span data-stu-id="c15d8-105">**Error ID:** BC30281</span></span>  
+ <span data-ttu-id="aef20-105">**오류 ID:** BC30281</span><span class="sxs-lookup"><span data-stu-id="aef20-105">**Error ID:** BC30281</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c15d8-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c15d8-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="aef20-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="aef20-106">To correct this error</span></span>  
   
--   <span data-ttu-id="c15d8-107">`Dim` 문 또는 `Event` 문을 구조체에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="c15d8-107">Add a `Dim` statement or an `Event` statement to the structure.</span></span>  
+-   <span data-ttu-id="aef20-107">`Dim` 문 또는 `Event` 문을 구조체에 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="aef20-107">Add a `Dim` statement or an `Event` statement to the structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c15d8-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="c15d8-108">See also</span></span>
-- [<span data-ttu-id="c15d8-109">Structure 문</span><span class="sxs-lookup"><span data-stu-id="c15d8-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="c15d8-110">Dim 문</span><span class="sxs-lookup"><span data-stu-id="c15d8-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
-- [<span data-ttu-id="c15d8-111">Event 문</span><span class="sxs-lookup"><span data-stu-id="c15d8-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+## <a name="see-also"></a><span data-ttu-id="aef20-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="aef20-108">See also</span></span>
+- [<span data-ttu-id="aef20-109">Structure 문</span><span class="sxs-lookup"><span data-stu-id="aef20-109">Structure Statement</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="aef20-110">Dim 문</span><span class="sxs-lookup"><span data-stu-id="aef20-110">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)
+- [<span data-ttu-id="aef20-111">Event 문</span><span class="sxs-lookup"><span data-stu-id="aef20-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
