--- a/docs/visual-basic/misc/bc30503.md
+++ b/docs/visual-basic/misc/bc30503.md
@@ -1,5 +1,5 @@
 ---
-title: 모듈의 속성을 선언할 수 없습니다. '&lt;지정자&gt;'
+title: 모듈의 속성을 선언할 수 없습니다 '<specifier>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30503
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30503
 ms.assetid: a8fc4ce5-425f-4aad-9c77-95893baddcc1
-ms.openlocfilehash: bb5dcb4c207076a496e000cfecbf505831f21943
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 196034c65142a27dee99f0279e50e2b7cd454189
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54575936"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261635"
 ---
-# <a name="properties-in-a-module-cannot-be-declared-ltspecifiergt"></a><span data-ttu-id="c6265-102">모듈의 속성을 선언할 수 없습니다. '&lt;지정자&gt;'</span><span class="sxs-lookup"><span data-stu-id="c6265-102">Properties in a Module cannot be declared '&lt;specifier&gt;'</span></span>
-<span data-ttu-id="c6265-103">모듈 내의 속성에서 `MustOverride`, `NotOverridable`또는 `Overridable`등의 지정자를 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="c6265-103">You have attempted to use a specifier, such as `MustOverride`, `NotOverridable`, or `Overridable`, on a property within a module.</span></span>  
+# <a name="properties-in-a-module-cannot-be-declared-specifier"></a><span data-ttu-id="0e40a-102">모듈의 속성을 선언할 수 없습니다 '\<지정자 >'</span><span class="sxs-lookup"><span data-stu-id="0e40a-102">Properties in a Module cannot be declared '\<specifier>'</span></span>
+<span data-ttu-id="0e40a-103">모듈 내의 속성에서 `MustOverride`, `NotOverridable`또는 `Overridable`등의 지정자를 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="0e40a-103">You have attempted to use a specifier, such as `MustOverride`, `NotOverridable`, or `Overridable`, on a property within a module.</span></span>  
   
- <span data-ttu-id="c6265-104">**오류 ID:** BC30503</span><span class="sxs-lookup"><span data-stu-id="c6265-104">**Error ID:** BC30503</span></span>  
+ <span data-ttu-id="0e40a-104">**오류 ID:** BC30503</span><span class="sxs-lookup"><span data-stu-id="0e40a-104">**Error ID:** BC30503</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c6265-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c6265-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0e40a-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="0e40a-105">To correct this error</span></span>  
   
--   <span data-ttu-id="c6265-106">지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="c6265-106">Remove the specifier.</span></span>  
+-   <span data-ttu-id="0e40a-106">지정자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="0e40a-106">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c6265-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="c6265-107">See also</span></span>
-- [<span data-ttu-id="c6265-108">Module 문</span><span class="sxs-lookup"><span data-stu-id="c6265-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
-- [<span data-ttu-id="c6265-109">모듈 \<키워드></span><span class="sxs-lookup"><span data-stu-id="c6265-109">Module \<keyword></span></span>](../../visual-basic/language-reference/modifiers/module-keyword.md)
+## <a name="see-also"></a><span data-ttu-id="0e40a-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="0e40a-107">See also</span></span>
+- [<span data-ttu-id="0e40a-108">Module 문</span><span class="sxs-lookup"><span data-stu-id="0e40a-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="0e40a-109">모듈 \<키워드></span><span class="sxs-lookup"><span data-stu-id="0e40a-109">Module \<keyword></span></span>](../../visual-basic/language-reference/modifiers/module-keyword.md)
