--- a/docs/visual-basic/misc/bc30659.md
+++ b/docs/visual-basic/misc/bc30659.md
@@ -1,5 +1,5 @@
 ---
-title: 속성 또는 필드 '&lt;이름을&gt;' 특성 형식이 잘못 되지 않은
+title: 속성 또는 필드 '<name>' 특성 형식이 잘못 되지 않은
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30659
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30659
 ms.assetid: aca34cd1-ea8a-4a29-9e36-a999dfe0742e
-ms.openlocfilehash: e7eaac2df41a00e988a6f6e785459f8725d17189
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 559d6b09adf64bbd56b2e8bebb6f1c5ccf33e611
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54524452"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261388"
 ---
-# <a name="property-or-field-ltnamegt-does-not-have-a-valid-attribute-type"></a><span data-ttu-id="6c2a7-102">속성 또는 필드 '&lt;이름을&gt;' 특성 형식이 잘못 되지 않은</span><span class="sxs-lookup"><span data-stu-id="6c2a7-102">Property or field '&lt;name&gt;' does not have a valid attribute type</span></span>
-<span data-ttu-id="6c2a7-103">있습니다 특성은 다른 적절 한 생성자를 사용할 수 있지만 유효한 특성 형식에 사용할 수 없는 특성 생성자를 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="6c2a7-103">You might be using an attribute constructor that does not accept a valid attribute type, even though the attribute may have other appropriate constructors.</span></span>  
+# <a name="property-or-field-name-does-not-have-a-valid-attribute-type"></a><span data-ttu-id="ad677-102">속성 또는 필드 '\<이름 >' 특성 형식이 잘못 되지 않은</span><span class="sxs-lookup"><span data-stu-id="ad677-102">Property or field '\<name>' does not have a valid attribute type</span></span>
+<span data-ttu-id="ad677-103">있습니다 특성은 다른 적절 한 생성자를 사용할 수 있지만 유효한 특성 형식에 사용할 수 없는 특성 생성자를 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ad677-103">You might be using an attribute constructor that does not accept a valid attribute type, even though the attribute may have other appropriate constructors.</span></span>  
   
- <span data-ttu-id="6c2a7-104">**오류 ID:** BC30659</span><span class="sxs-lookup"><span data-stu-id="6c2a7-104">**Error ID:** BC30659</span></span>  
+ <span data-ttu-id="ad677-104">**오류 ID:** BC30659</span><span class="sxs-lookup"><span data-stu-id="ad677-104">**Error ID:** BC30659</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6c2a7-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6c2a7-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ad677-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ad677-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="6c2a7-106">이 특성의 사용 현황을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="6c2a7-106">Check the usage of this attribute.</span></span>  
+1.  <span data-ttu-id="ad677-106">이 특성의 사용 현황을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="ad677-106">Check the usage of this attribute.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6c2a7-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="6c2a7-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ad677-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="ad677-107">See also</span></span>
 - <xref:System.AttributeUsageAttribute>
-- [<span data-ttu-id="6c2a7-108">특성 개요</span><span class="sxs-lookup"><span data-stu-id="6c2a7-108">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="ad677-108">특성 개요</span><span class="sxs-lookup"><span data-stu-id="ad677-108">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
