--- a/docs/visual-basic/misc/bc30797.md
+++ b/docs/visual-basic/misc/bc30797.md
@@ -1,5 +1,5 @@
 ---
-title: "프로젝트 수준의 가져오기 하는 동안 오류가 발생 했습니다. '&lt;qualifiedelementname&gt;'에 at'&lt;qualifiedcontainername&gt;': &lt;errormessage&gt;"
+title: 프로젝트 수준의 가져오기 하는 동안 오류가 발생 했습니다. '<qualifiedelementname>'에서'<qualifiedcontainername>'. <errormessage>
 ms.date: 07/20/2015
 f1_keywords:
 - BC30797
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30797
 ms.assetid: 529f354f-f255-4adc-ab21-bd1796e58d69
-ms.openlocfilehash: ddad21185cd230bf798b9aa8818a896c41aeae0a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 04c9857f905efc84da3f7603fa0b5477058b26dc
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54577610"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261310"
 ---
-# <a name="error-in-project-level-import-ltqualifiedelementnamegt-at-ltqualifiedcontainernamegt--lterrormessagegt"></a><span data-ttu-id="4dbcc-102">프로젝트 수준의 가져오기 하는 동안 오류가 발생 했습니다. '&lt;qualifiedelementname&gt;'에 at'&lt;qualifiedcontainername&gt;': &lt;errormessage&gt;</span><span class="sxs-lookup"><span data-stu-id="4dbcc-102">Error in project-level import '&lt;qualifiedelementname&gt;' at '&lt;qualifiedcontainername&gt;' : &lt;errormessage&gt;</span></span>
-<span data-ttu-id="4dbcc-103">다른 어셈블리에 정의된 프로그래밍 요소를 문에서 액세스하지만 해당 어셈블리에 대한 프로젝트 참조가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="4dbcc-103">A statement accesses a programming element that is defined in another assembly, but there is no project reference to that assembly.</span></span>  
+# <a name="error-in-project-level-import-qualifiedelementname-at-qualifiedcontainername--errormessage"></a><span data-ttu-id="5f2f1-102">프로젝트 수준의 가져오기 하는 동안 오류가 발생 했습니다. '\<qualifiedelementname >'에서 '\<qualifiedcontainername >': \<errormessage ></span><span class="sxs-lookup"><span data-stu-id="5f2f1-102">Error in project-level import '\<qualifiedelementname>' at '\<qualifiedcontainername>' : \<errormessage></span></span>
+<span data-ttu-id="5f2f1-103">다른 어셈블리에 정의된 프로그래밍 요소를 문에서 액세스하지만 해당 어셈블리에 대한 프로젝트 참조가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="5f2f1-103">A statement accesses a programming element that is defined in another assembly, but there is no project reference to that assembly.</span></span>  
   
- <span data-ttu-id="4dbcc-104">예를 들어 코드에서 한정 문자열 `desiredEnumeration` 을 사용하여 `otherNamespace.otherClass.desiredEnumeration`라는 열거형에 액세스할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="4dbcc-104">For example, your code might be accessing an enumeration named `desiredEnumeration` using the qualification string `otherNamespace.otherClass.desiredEnumeration`.</span></span> <span data-ttu-id="4dbcc-105">컴파일러가 프로젝트 참조에서 `otherNamespace.otherClass` 를 찾을 수 없는 경우 이 오류가 생성됩니다.</span><span class="sxs-lookup"><span data-stu-id="4dbcc-105">If the compiler cannot find `otherNamespace.otherClass` among your project's references, it generates this error.</span></span>  
+ <span data-ttu-id="5f2f1-104">예를 들어 코드에서 한정 문자열 `desiredEnumeration` 을 사용하여 `otherNamespace.otherClass.desiredEnumeration`라는 열거형에 액세스할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="5f2f1-104">For example, your code might be accessing an enumeration named `desiredEnumeration` using the qualification string `otherNamespace.otherClass.desiredEnumeration`.</span></span> <span data-ttu-id="5f2f1-105">컴파일러가 프로젝트 참조에서 `otherNamespace.otherClass` 를 찾을 수 없는 경우 이 오류가 생성됩니다.</span><span class="sxs-lookup"><span data-stu-id="5f2f1-105">If the compiler cannot find `otherNamespace.otherClass` among your project's references, it generates this error.</span></span>  
   
- <span data-ttu-id="4dbcc-106">**오류 ID:** BC30797</span><span class="sxs-lookup"><span data-stu-id="4dbcc-106">**Error ID:** BC30797</span></span>  
+ <span data-ttu-id="5f2f1-106">**오류 ID:** BC30797</span><span class="sxs-lookup"><span data-stu-id="5f2f1-106">**Error ID:** BC30797</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4dbcc-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4dbcc-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5f2f1-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="5f2f1-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="4dbcc-108">프로그래밍 요소의 한정 문자열에서 모든 요소를 올바르게 입력했는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="4dbcc-108">Make sure every element in the qualification string of the programming element is spelled correctly.</span></span>  
+1.  <span data-ttu-id="5f2f1-108">프로그래밍 요소의 한정 문자열에서 모든 요소를 올바르게 입력했는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="5f2f1-108">Make sure every element in the qualification string of the programming element is spelled correctly.</span></span>  
   
-2.  <span data-ttu-id="4dbcc-109">프로젝트에 원하는 프로그래밍 요소를 정의하는 어셈블리에 대한 참조가 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="4dbcc-109">Make sure your project has a reference to the assembly defining the desired programming element.</span></span>  
+2.  <span data-ttu-id="5f2f1-109">프로젝트에 원하는 프로그래밍 요소를 정의하는 어셈블리에 대한 참조가 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="5f2f1-109">Make sure your project has a reference to the assembly defining the desired programming element.</span></span>  
   
-3.  <span data-ttu-id="4dbcc-110">오류 메시지를 확인하고 적절한 조치를 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="4dbcc-110">Consult the error message and take appropriate action.</span></span>  
+3.  <span data-ttu-id="5f2f1-110">오류 메시지를 확인하고 적절한 조치를 수행합니다.</span><span class="sxs-lookup"><span data-stu-id="5f2f1-110">Consult the error message and take appropriate action.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4dbcc-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="4dbcc-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="5f2f1-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="5f2f1-111">See also</span></span>
 
-- [<span data-ttu-id="4dbcc-112">프로젝트 및 솔루션 속성 관리</span><span class="sxs-lookup"><span data-stu-id="4dbcc-112">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
+- [<span data-ttu-id="5f2f1-112">프로젝트 및 솔루션 속성 관리</span><span class="sxs-lookup"><span data-stu-id="5f2f1-112">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
 
