--- a/docs/visual-basic/misc/bc30919.md
+++ b/docs/visual-basic/misc/bc30919.md
@@ -1,5 +1,5 @@
 ---
-title: 때문에이 ' Sub n e '의 첫째 문은 'MyBase.New' 또는 'm y'에 대 한 명시적 호출 이어야 합니다는 '&lt;constructorname&gt;'에서 기본 클래스'&lt;baseclassname&gt;'의'&lt;derivedclassname &gt;' obsolete로 표시 되어 있습니다.
+title: 때문에이 ' Sub n e '의 첫째 문은 'MyBase.New' 또는 'm y'에 대 한 명시적 호출 이어야 합니다는 '<constructorname>'에서 기본 클래스'<baseclassname>'의'<derivedclassname>' obsolete로 표시 되어 있습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30919
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30919
 ms.assetid: 437e3204-8ddc-45d3-b9b4-c66d53a61a6d
-ms.openlocfilehash: 73882e3adbce668ca30d8e0f64ae4965bca38561
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 1a98c90ad935a2552787e8e34c33b759681b54b3
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53767566"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264140"
 ---
-# <a name="first-statement-of-this-sub-new-must-be-an-explicit-call-to-mybasenew-or-myclassnew-because-the-ltconstructornamegt-in-the-base-class-ltbaseclassnamegt-of-ltderivedclassnamegt-is-marked-obsolete"></a><span data-ttu-id="b5fc4-102">때문에이 ' Sub n e '의 첫째 문은 'MyBase.New' 또는 'm y'에 대 한 명시적 호출 이어야 합니다는 '&lt;constructorname&gt;'에서 기본 클래스'&lt;baseclassname&gt;'의'&lt;derivedclassname &gt;' obsolete로 표시 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-102">First statement of this 'Sub New' must be an explicit call to 'MyBase.New' or 'MyClass.New' because the '&lt;constructorname&gt;' in the base class '&lt;baseclassname&gt;' of '&lt;derivedclassname&gt;' is marked obsolete.</span></span>
-<span data-ttu-id="b5fc4-103">클래스 생성자는 기본 클래스 생성자를 명시적으로 호출하지 않으며, 암시적 기본 클래스 생성자가 <xref:System.ObsoleteAttribute> 특성 및 지시문으로 표시되어 오류로 처리합니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-103">A class constructor does not explicitly call a base class constructor, and the implicit base class constructor is marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as an error.</span></span>  
+# <a name="first-statement-of-this-sub-new-must-be-an-explicit-call-to-mybasenew-or-myclassnew-because-the-constructorname-in-the-base-class-baseclassname-of-derivedclassname-is-marked-obsolete"></a><span data-ttu-id="03a48-102">때문에이 ' Sub n e '의 첫째 문은 'MyBase.New' 또는 'm y'에 대 한 명시적 호출 이어야 합니다는 '\<constructorname >' 기본 클래스 '\<baseclassname >'의 '\<derivedclassname >' obsolete로 표시 되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-102">First statement of this 'Sub New' must be an explicit call to 'MyBase.New' or 'MyClass.New' because the '\<constructorname>' in the base class '\<baseclassname>' of '\<derivedclassname>' is marked obsolete.</span></span>
+<span data-ttu-id="03a48-103">클래스 생성자는 기본 클래스 생성자를 명시적으로 호출하지 않으며, 암시적 기본 클래스 생성자가 <xref:System.ObsoleteAttribute> 특성 및 지시문으로 표시되어 오류로 처리합니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-103">A class constructor does not explicitly call a base class constructor, and the implicit base class constructor is marked with the <xref:System.ObsoleteAttribute> attribute and the directive to treat it as an error.</span></span>  
   
- <span data-ttu-id="b5fc4-104">파생된 클래스 생성자는 기본 클래스 생성자를 호출 하지 않으면 Visual Basic에서는 매개 변수가 없는 기본 클래스 생성자에 대 한 암시적 호출을 생성 하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-104">When a derived class constructor does not call a base class constructor, Visual Basic attempts to generate an implicit call to a parameterless base class constructor.</span></span> <span data-ttu-id="b5fc4-105">인수 없이 호출할 수 있는 기본 클래스에 액세스할 수 있는 생성자가 없습니다 있으면 Visual Basic에서 암시적 호출을 생성할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-105">If there is no accessible constructor in the base class that can be called without arguments, Visual Basic cannot generate an implicit call.</span></span> <span data-ttu-id="b5fc4-106">이 경우 필요한 생성자는 기본적으로 <xref:System.ObsoleteAttribute> 특성을 사용 하므로 Visual Basic에서 호출할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-106">In this case, the required constructor is marked with the <xref:System.ObsoleteAttribute> attribute, so Visual Basic cannot call it.</span></span>  
+ <span data-ttu-id="03a48-104">파생된 클래스 생성자는 기본 클래스 생성자를 호출 하지 않으면 Visual Basic에서는 매개 변수가 없는 기본 클래스 생성자에 대 한 암시적 호출을 생성 하려고 합니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-104">When a derived class constructor does not call a base class constructor, Visual Basic attempts to generate an implicit call to a parameterless base class constructor.</span></span> <span data-ttu-id="03a48-105">인수 없이 호출할 수 있는 기본 클래스에 액세스할 수 있는 생성자가 없습니다 있으면 Visual Basic에서 암시적 호출을 생성할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-105">If there is no accessible constructor in the base class that can be called without arguments, Visual Basic cannot generate an implicit call.</span></span> <span data-ttu-id="03a48-106">이 경우 필요한 생성자는 기본적으로 <xref:System.ObsoleteAttribute> 특성을 사용 하므로 Visual Basic에서 호출할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-106">In this case, the required constructor is marked with the <xref:System.ObsoleteAttribute> attribute, so Visual Basic cannot call it.</span></span>  
   
- <span data-ttu-id="b5fc4-107">프로그래밍 요소에 <xref:System.ObsoleteAttribute> 를 적용하여 더 이상 사용하지 않는 요소로 표시할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-107">You can mark any programming element as being no longer in use by applying <xref:System.ObsoleteAttribute> to it.</span></span> <span data-ttu-id="b5fc4-108">이렇게 하면 특성의 <xref:System.ObsoleteAttribute.IsError%2A> 속성을 `True` 또는 `False`로 설정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-108">If you do this, you can set the attribute's <xref:System.ObsoleteAttribute.IsError%2A> property to either `True` or `False`.</span></span> <span data-ttu-id="b5fc4-109">`True`로 설정하면 컴파일러가 요소를 사용하려는 시도를 오류로 처리합니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-109">If you set it to `True`, the compiler treats an attempt to use the element as an error.</span></span> <span data-ttu-id="b5fc4-110">`False`로 설정하거나 기본값인 `False`로 두면 컴파일러가 요소를 사용하려는 시도가 있을 경우 경고를 발생시킵니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-110">If you set it to `False`, or let it default to `False`, the compiler issues a warning if there is an attempt to use the element.</span></span>  
+ <span data-ttu-id="03a48-107">프로그래밍 요소에 <xref:System.ObsoleteAttribute> 를 적용하여 더 이상 사용하지 않는 요소로 표시할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-107">You can mark any programming element as being no longer in use by applying <xref:System.ObsoleteAttribute> to it.</span></span> <span data-ttu-id="03a48-108">이렇게 하면 특성의 <xref:System.ObsoleteAttribute.IsError%2A> 속성을 `True` 또는 `False`로 설정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-108">If you do this, you can set the attribute's <xref:System.ObsoleteAttribute.IsError%2A> property to either `True` or `False`.</span></span> <span data-ttu-id="03a48-109">`True`로 설정하면 컴파일러가 요소를 사용하려는 시도를 오류로 처리합니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-109">If you set it to `True`, the compiler treats an attempt to use the element as an error.</span></span> <span data-ttu-id="03a48-110">`False`로 설정하거나 기본값인 `False`로 두면 컴파일러가 요소를 사용하려는 시도가 있을 경우 경고를 발생시킵니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-110">If you set it to `False`, or let it default to `False`, the compiler issues a warning if there is an attempt to use the element.</span></span>  
   
- <span data-ttu-id="b5fc4-111">**오류 ID:** BC30919</span><span class="sxs-lookup"><span data-stu-id="b5fc4-111">**Error ID:** BC30919</span></span>  
+ <span data-ttu-id="03a48-111">**오류 ID:** BC30919</span><span class="sxs-lookup"><span data-stu-id="03a48-111">**Error ID:** BC30919</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b5fc4-112">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b5fc4-112">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="03a48-112">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="03a48-112">To correct this error</span></span>  
   
--   <span data-ttu-id="b5fc4-113">`MyBase.New()` 또는 `MyClass.New()` 에 대한 호출을 파생 클래스에 `Sub New` 의 첫 번째 문으로 포함합니다.</span><span class="sxs-lookup"><span data-stu-id="b5fc4-113">Include a call to `MyBase.New()` or `MyClass.New()` as the first statement of the `Sub New` in the derived class.</span></span>
+-   <span data-ttu-id="03a48-113">`MyBase.New()` 또는 `MyClass.New()` 에 대한 호출을 파생 클래스에 `Sub New` 의 첫 번째 문으로 포함합니다.</span><span class="sxs-lookup"><span data-stu-id="03a48-113">Include a call to `MyBase.New()` or `MyClass.New()` as the first statement of the `Sub New` in the derived class.</span></span>
