--- a/docs/visual-basic/misc/bc31076.md
+++ b/docs/visual-basic/misc/bc31076.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;modulename&gt;'은 모듈이 며 어셈블리로 참조할 수 없습니다."
+title: "'<modulename>'은 모듈이 며 어셈블리로 참조할 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31076
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31076
 ms.assetid: 83e24689-a846-4ade-8e33-40cda02952af
-ms.openlocfilehash: 6e370274927fffdd932fbf44f7a483d27a14b0d4
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 6b09035574e5e20f65c40acfac845f6918c5713f
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54559530"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55263695"
 ---
-# <a name="ltmodulenamegt-is-a-module-and-cannot-be-referenced-as-an-assembly"></a><span data-ttu-id="cd509-102">'&lt;modulename&gt;'은 모듈이 며 어셈블리로 참조할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="cd509-102">'&lt;modulename&gt;' is a module and cannot be referenced as an assembly</span></span>
-<span data-ttu-id="cd509-103">모듈을 어셈블리로 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="cd509-103">An attempt was made to use a module as an assembly.</span></span>  
+# <a name="modulename-is-a-module-and-cannot-be-referenced-as-an-assembly"></a><span data-ttu-id="47547-102">'\<modulename >'은 모듈이 며 어셈블리로 참조할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="47547-102">'\<modulename>' is a module and cannot be referenced as an assembly</span></span>
+<span data-ttu-id="47547-103">모듈을 어셈블리로 사용하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="47547-103">An attempt was made to use a module as an assembly.</span></span>  
   
- <span data-ttu-id="cd509-104">**오류 ID:** BC31076</span><span class="sxs-lookup"><span data-stu-id="cd509-104">**Error ID:** BC31076</span></span>  
+ <span data-ttu-id="47547-104">**오류 ID:** BC31076</span><span class="sxs-lookup"><span data-stu-id="47547-104">**Error ID:** BC31076</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cd509-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="cd509-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="47547-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="47547-105">To correct this error</span></span>  
   
--   <span data-ttu-id="cd509-106">어셈블리에 대한 참조를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="cd509-106">Change the reference to an assembly.</span></span>  
+-   <span data-ttu-id="47547-106">어셈블리에 대한 참조를 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="47547-106">Change the reference to an assembly.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cd509-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="cd509-107">See also</span></span>
-- [<span data-ttu-id="cd509-108">Module 문</span><span class="sxs-lookup"><span data-stu-id="cd509-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
-- [<span data-ttu-id="cd509-109">어셈블리</span><span class="sxs-lookup"><span data-stu-id="cd509-109">Assembly</span></span>](../../visual-basic/language-reference/modifiers/assembly.md)
+## <a name="see-also"></a><span data-ttu-id="47547-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="47547-107">See also</span></span>
+- [<span data-ttu-id="47547-108">Module 문</span><span class="sxs-lookup"><span data-stu-id="47547-108">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+- [<span data-ttu-id="47547-109">어셈블리</span><span class="sxs-lookup"><span data-stu-id="47547-109">Assembly</span></span>](../../visual-basic/language-reference/modifiers/assembly.md)
