--- a/docs/visual-basic/misc/bc31097.md
+++ b/docs/visual-basic/misc/bc31097.md
@@ -1,5 +1,5 @@
 ---
-title: 멤버 '&lt;membername&gt;'클래스에서 찾을 수 없습니다'&lt;classname&gt;'
+title: 멤버 '<membername>'클래스에서 찾을 수 없습니다'<classname>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31097
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC31097
 ms.assetid: 855fa085-21ec-4547-93d5-d39cd5b7be8c
-ms.openlocfilehash: 241a573c4a73ec604d4622f110cac137b7eb05a1
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 62388d06ad0523e51f8e7ad37ac89172aec7bfba
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53758032"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264481"
 ---
-# <a name="member-ltmembernamegt-cannot-be-found-in-class-ltclassnamegt"></a><span data-ttu-id="f012a-102">멤버 '&lt;membername&gt;'클래스에서 찾을 수 없습니다'&lt;classname&gt;'</span><span class="sxs-lookup"><span data-stu-id="f012a-102">Member '&lt;membername&gt;' cannot be found in class '&lt;classname&gt;'</span></span>
-<span data-ttu-id="f012a-103">멤버 '\<membername >' 클래스에서 찾을 수 없는\<응용 프로그램 이름 >'입니다.</span><span class="sxs-lookup"><span data-stu-id="f012a-103">Member '\<membername>' cannot be found in class '\<classname>'.</span></span> <span data-ttu-id="f012a-104">대개 'Microsoft.VisualBasic.dll'이 일치하지 않으면 이러한 상황이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="f012a-104">This condition is usually the result of a mismatched 'Microsoft.VisualBasic.dll'.</span></span>  
+# <a name="member-membername-cannot-be-found-in-class-classname"></a><span data-ttu-id="b28a0-102">멤버 '\<membername >' 클래스에서 찾을 수 없는\<응용 프로그램 이름 >'</span><span class="sxs-lookup"><span data-stu-id="b28a0-102">Member '\<membername>' cannot be found in class '\<classname>'</span></span>
+<span data-ttu-id="b28a0-103">멤버 '\<membername >' 클래스에서 찾을 수 없는\<응용 프로그램 이름 >'입니다.</span><span class="sxs-lookup"><span data-stu-id="b28a0-103">Member '\<membername>' cannot be found in class '\<classname>'.</span></span> <span data-ttu-id="b28a0-104">대개 'Microsoft.VisualBasic.dll'이 일치하지 않으면 이러한 상황이 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="b28a0-104">This condition is usually the result of a mismatched 'Microsoft.VisualBasic.dll'.</span></span>  
   
- <span data-ttu-id="f012a-105">정의된 멤버를 찾을 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f012a-105">A defined member could not be located.</span></span>  
+ <span data-ttu-id="b28a0-105">정의된 멤버를 찾을 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="b28a0-105">A defined member could not be located.</span></span>  
   
- <span data-ttu-id="f012a-106">**오류 ID:** BC31097</span><span class="sxs-lookup"><span data-stu-id="f012a-106">**Error ID:** BC31097</span></span>  
+ <span data-ttu-id="b28a0-106">**오류 ID:** BC31097</span><span class="sxs-lookup"><span data-stu-id="b28a0-106">**Error ID:** BC31097</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="f012a-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f012a-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b28a0-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b28a0-107">To correct this error</span></span>  
   
-1.  <span data-ttu-id="f012a-108">프로그램을 다시 컴파일하여 오류가 다시 발생하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="f012a-108">Compile the program again to see if the error recurs.</span></span>  
+1.  <span data-ttu-id="b28a0-108">프로그램을 다시 컴파일하여 오류가 다시 발생하는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="b28a0-108">Compile the program again to see if the error recurs.</span></span>  
   
-2.  <span data-ttu-id="f012a-109">오류가 다시 발생 하면 작업 내용을 저장 하 고 Visual Studio를 다시 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="f012a-109">If the error recurs, save your work and restart Visual Studio.</span></span>  
+2.  <span data-ttu-id="b28a0-109">오류가 다시 발생 하면 작업 내용을 저장 하 고 Visual Studio를 다시 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="b28a0-109">If the error recurs, save your work and restart Visual Studio.</span></span>  
   
-3.  <span data-ttu-id="f012a-110">오류가 계속 발생 하는 경우에 Visual Basic을 다시 설치 하십시오.</span><span class="sxs-lookup"><span data-stu-id="f012a-110">If the error persists, reinstall Visual Basic.</span></span>  
+3.  <span data-ttu-id="b28a0-110">오류가 계속 발생 하는 경우에 Visual Basic을 다시 설치 하십시오.</span><span class="sxs-lookup"><span data-stu-id="b28a0-110">If the error persists, reinstall Visual Basic.</span></span>  
   
-4.  <span data-ttu-id="f012a-111">다시 설치 후에도 오류가 계속 발생하면 Microsoft 기술 지원 서비스에 알립니다.</span><span class="sxs-lookup"><span data-stu-id="f012a-111">If the error persists after reinstallation, notify Microsoft Product Support Services.</span></span>  
+4.  <span data-ttu-id="b28a0-111">다시 설치 후에도 오류가 계속 발생하면 Microsoft 기술 지원 서비스에 알립니다.</span><span class="sxs-lookup"><span data-stu-id="b28a0-111">If the error persists after reinstallation, notify Microsoft Product Support Services.</span></span>  
   
 
