--- a/docs/visual-basic/misc/bc31165.md
+++ b/docs/visual-basic/misc/bc31165.md
@@ -1,5 +1,5 @@
 ---
-title: 필요한 시작 '&lt;' XML 태그
+title: XML 태그에 시작 '<'가 필요합니다.
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31165
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31165
 ms.assetid: d6c411f3-06be-4647-a18a-8ff8a24ff94b
-ms.openlocfilehash: 2b361810a40748626cf66598af4cb492278ed27f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 6e2ec4d56294d984c6e419b910e870f146831712
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54503090"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55263747"
 ---
-# <a name="expected-beginning-lt-for-an-xml-tag"></a><span data-ttu-id="fa84e-102">필요한 시작 '&lt;' XML 태그</span><span class="sxs-lookup"><span data-stu-id="fa84e-102">Expected beginning '&lt;' for an XML tag</span></span>
-<span data-ttu-id="fa84e-103">XML 리터럴의 XML 태그에 필요한 시작 '<' 문자가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="fa84e-103">The XML tag for an XML literal is missing the required beginning '<' character.</span></span>  
+# <a name="expected-beginning--for-an-xml-tag"></a><span data-ttu-id="1ef64-102">필요한 시작 '\<' XML 태그</span><span class="sxs-lookup"><span data-stu-id="1ef64-102">Expected beginning '\<' for an XML tag</span></span>
+<span data-ttu-id="1ef64-103">XML 리터럴의 XML 태그에 필요한 시작 '<' 문자가 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1ef64-103">The XML tag for an XML literal is missing the required beginning '<' character.</span></span>  
   
- <span data-ttu-id="fa84e-104">**오류 ID:** BC31165</span><span class="sxs-lookup"><span data-stu-id="fa84e-104">**Error ID:** BC31165</span></span>  
+ <span data-ttu-id="1ef64-104">**오류 ID:** BC31165</span><span class="sxs-lookup"><span data-stu-id="1ef64-104">**Error ID:** BC31165</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="fa84e-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fa84e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1ef64-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1ef64-105">To correct this error</span></span>  
   
--   <span data-ttu-id="fa84e-106">XML 리터럴의 XML 태그 시작에 '<' 문자를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="fa84e-106">Add the '<' character to the start of the XML tag for the XML literal.</span></span>  
+-   <span data-ttu-id="1ef64-106">XML 리터럴의 XML 태그 시작에 '<' 문자를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="1ef64-106">Add the '<' character to the start of the XML tag for the XML literal.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="fa84e-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="fa84e-107">See also</span></span>
-- [<span data-ttu-id="fa84e-108">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="fa84e-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="fa84e-109">XML</span><span class="sxs-lookup"><span data-stu-id="fa84e-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="1ef64-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="1ef64-107">See also</span></span>
+- [<span data-ttu-id="1ef64-108">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="1ef64-108">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
+- [<span data-ttu-id="1ef64-109">XML</span><span class="sxs-lookup"><span data-stu-id="1ef64-109">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
