--- a/docs/visual-basic/misc/bc32000.md
+++ b/docs/visual-basic/misc/bc32000.md
@@ -1,5 +1,5 @@
 ---
-title: 지역 변수 '&lt;variablename&gt;'는 선언에 참조할 수 없습니다
+title: 지역 변수 '<variablename>'는 선언에 참조할 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32000
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC32000
 ms.assetid: 81e2bbe3-8b8a-4bf7-b344-08489d50ef6e
-ms.openlocfilehash: 190e8b81e2a6c97df430f9950e27067c5968c192
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: f3ee8d35e4ffeaa1c579231971e6f667aeabf782
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54559881"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55269200"
 ---
-# <a name="local-variable-ltvariablenamegt-cannot-be-referred-to-before-it-is-declared"></a><span data-ttu-id="04267-102">지역 변수 '&lt;variablename&gt;'는 선언에 참조할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="04267-102">Local variable '&lt;variablename&gt;' cannot be referred to before it is declared</span></span>
-<span data-ttu-id="04267-103">프로시저 내의 변수가 선언 전에 사용됩니다.</span><span class="sxs-lookup"><span data-stu-id="04267-103">A variable inside a procedure is used before its declaration.</span></span>  
+# <a name="local-variable-variablename-cannot-be-referred-to-before-it-is-declared"></a><span data-ttu-id="4129b-102">지역 변수 '\<variablename >'는 선언에 참조할 수 없습니다</span><span class="sxs-lookup"><span data-stu-id="4129b-102">Local variable '\<variablename>' cannot be referred to before it is declared</span></span>
+<span data-ttu-id="4129b-103">프로시저 내의 변수가 선언 전에 사용됩니다.</span><span class="sxs-lookup"><span data-stu-id="4129b-103">A variable inside a procedure is used before its declaration.</span></span>  
   
- <span data-ttu-id="04267-104">**오류 ID:** BC32000</span><span class="sxs-lookup"><span data-stu-id="04267-104">**Error ID:** BC32000</span></span>  
+ <span data-ttu-id="4129b-104">**오류 ID:** BC32000</span><span class="sxs-lookup"><span data-stu-id="4129b-104">**Error ID:** BC32000</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="04267-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="04267-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4129b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4129b-105">To correct this error</span></span>  
   
--   <span data-ttu-id="04267-106">변수의 첫 번째 참조 앞으로 선언을 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="04267-106">Move the declaration to precede the first reference to the variable.</span></span>  
+-   <span data-ttu-id="4129b-106">변수의 첫 번째 참조 앞으로 선언을 이동합니다.</span><span class="sxs-lookup"><span data-stu-id="4129b-106">Move the declaration to precede the first reference to the variable.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="04267-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="04267-107">See also</span></span>
-- [<span data-ttu-id="04267-108">변수 선언</span><span class="sxs-lookup"><span data-stu-id="04267-108">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+## <a name="see-also"></a><span data-ttu-id="4129b-107">참고자료</span><span class="sxs-lookup"><span data-stu-id="4129b-107">See also</span></span>
+- [<span data-ttu-id="4129b-108">변수 선언</span><span class="sxs-lookup"><span data-stu-id="4129b-108">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
