--- a/docs/visual-basic/misc/bc32110.md
+++ b/docs/visual-basic/misc/bc32110.md
@@ -1,5 +1,5 @@
 ---
-title: 제약 조건 '&lt;constraint1&gt;'간접 제약 조건 충돌'&lt;constraint2&gt;'형식 매개 변수 제약 조건에서 가져온'&lt;typeparameter1&gt;'
+title: 제약 조건 '<constraint1>'충돌할 간접 제약 조건'<constraint2>'형식 매개 변수 제약 조건에서 가져온'<typeparameter1>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc32110
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC32110
 ms.assetid: e799214d-23b4-4a3f-b61a-0b9d3387ead3
-ms.openlocfilehash: d36bebc602d2e89081c770694ad6f96afe6fbb8e
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 19b1be163f7b33eb44c274abbbbfa743640e7ef9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54502968"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261765"
 ---
-# <a name="constraint-ltconstraint1gt-conflicts-with-the-indirect-constraint-ltconstraint2gt-obtained-from-the-type-parameter-constraint-lttypeparameter1gt"></a><span data-ttu-id="1ed79-102">제약 조건 '&lt;constraint1&gt;'간접 제약 조건 충돌'&lt;constraint2&gt;'형식 매개 변수 제약 조건에서 가져온'&lt;typeparameter1&gt;'</span><span class="sxs-lookup"><span data-stu-id="1ed79-102">Constraint '&lt;constraint1&gt;' conflicts with the indirect constraint '&lt;constraint2&gt;' obtained from the type parameter constraint '&lt;typeparameter1&gt;'</span></span>
-<span data-ttu-id="1ed79-103">제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="1ed79-103">A generic type is declared with conflicting constraints due to a combination of direct and indirect constraints.</span></span>  
+# <a name="constraint-constraint1-conflicts-with-the-indirect-constraint-constraint2-obtained-from-the-type-parameter-constraint-typeparameter1"></a><span data-ttu-id="c5578-102">제약 조건 '\<constraint1 >' 간접 제약 조건 충돌 '\<constraint2 >' 형식 매개 변수 제약 조건에서 가져온 '\<typeparameter1 >'</span><span class="sxs-lookup"><span data-stu-id="c5578-102">Constraint '\<constraint1>' conflicts with the indirect constraint '\<constraint2>' obtained from the type parameter constraint '\<typeparameter1>'</span></span>
+<span data-ttu-id="c5578-103">제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="c5578-103">A generic type is declared with conflicting constraints due to a combination of direct and indirect constraints.</span></span>  
   
- <span data-ttu-id="1ed79-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="1ed79-104">The following statement can generate this error.</span></span>  
+ <span data-ttu-id="c5578-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="c5578-104">The following statement can generate this error.</span></span>  
   
  `Public Class testClass(Of t1 As {Structure, t2}, t2 As Class)`  
   
- <span data-ttu-id="1ed79-105">직접 제약 조건 `Structure` 및 간접 제약 조건 `Class` 으로 인해 형식 매개 변수 `t1`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="1ed79-105">The direct constraint `Structure` and the indirect constraint `Class` cause a conflict for type parameter `t1`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
+ <span data-ttu-id="c5578-105">직접 제약 조건 `Structure` 및 간접 제약 조건 `Class` 으로 인해 형식 매개 변수 `t1`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="c5578-105">The direct constraint `Structure` and the indirect constraint `Class` cause a conflict for type parameter `t1`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
   
- <span data-ttu-id="1ed79-106">**오류 ID:** BC32110</span><span class="sxs-lookup"><span data-stu-id="1ed79-106">**Error ID:** BC32110</span></span>  
+ <span data-ttu-id="c5578-106">**오류 ID:** BC32110</span><span class="sxs-lookup"><span data-stu-id="c5578-106">**Error ID:** BC32110</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1ed79-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1ed79-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c5578-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c5578-107">To correct this error</span></span>  
   
--   <span data-ttu-id="1ed79-108">제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="1ed79-108">Change the type parameter constraints to avoid conflicting constraints.</span></span>  
+-   <span data-ttu-id="c5578-108">제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="c5578-108">Change the type parameter constraints to avoid conflicting constraints.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="1ed79-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="1ed79-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c5578-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="c5578-109">See also</span></span>
 
-- [<span data-ttu-id="1ed79-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="1ed79-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="1ed79-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="1ed79-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
-- [<span data-ttu-id="1ed79-112">구조체(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="1ed79-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
-- [<span data-ttu-id="1ed79-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="1ed79-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="1ed79-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="1ed79-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [<span data-ttu-id="c5578-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="c5578-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="c5578-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="c5578-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="c5578-112">구조체(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="c5578-112">Structure (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/structure-statement.md)
+- [<span data-ttu-id="c5578-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="c5578-113">Class (Visual Basic)</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
+- [<span data-ttu-id="c5578-114">Value Types and Reference Types</span><span class="sxs-lookup"><span data-stu-id="c5578-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
