--- a/docs/visual-basic/misc/bc36016.md
+++ b/docs/visual-basic/misc/bc36016.md
@@ -1,5 +1,5 @@
 ---
-title: 암시적 변수가 '&lt;variablename&gt;'올바르지 때문 에'&lt;메시지&gt;'
+title: 암시적 변수가 '<variablename>'올바르지 때문 에'<message>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36016
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC36016
 ms.assetid: 0b834480-7202-4d3c-a841-46b763c7ebf2
-ms.openlocfilehash: 843bfd93cab5402e8dedea821e99c92ba4aa3b7f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 8d0c02b814d74c8ef027f0d1ea7079d85d365bc2
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54521906"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266543"
 ---
-# <a name="implicit-variable-ltvariablenamegt-is-invalid-because-of-ltmessagegt"></a><span data-ttu-id="c9b74-102">암시적 변수가 '&lt;variablename&gt;'올바르지 때문 에'&lt;메시지&gt;'</span><span class="sxs-lookup"><span data-stu-id="c9b74-102">Implicit variable '&lt;variablename&gt;' is invalid because of '&lt;message&gt;'</span></span>
-<span data-ttu-id="c9b74-103">디버그하는 동안 잘못된 암시적 변수가 생성되었습니다.</span><span class="sxs-lookup"><span data-stu-id="c9b74-103">An invalid implicit variable has been generated during debugging.</span></span>  
+# <a name="implicit-variable-variablename-is-invalid-because-of-message"></a><span data-ttu-id="1efa3-102">암시적 변수가 '\<variablename >' 때문에 올바르지 않습니다 '\<메시지 >'</span><span class="sxs-lookup"><span data-stu-id="1efa3-102">Implicit variable '\<variablename>' is invalid because of '\<message>'</span></span>
+<span data-ttu-id="1efa3-103">디버그하는 동안 잘못된 암시적 변수가 생성되었습니다.</span><span class="sxs-lookup"><span data-stu-id="1efa3-103">An invalid implicit variable has been generated during debugging.</span></span>  
   
- <span data-ttu-id="c9b74-104">**오류 ID:** BC36016</span><span class="sxs-lookup"><span data-stu-id="c9b74-104">**Error ID:** BC36016</span></span>  
+ <span data-ttu-id="1efa3-104">**오류 ID:** BC36016</span><span class="sxs-lookup"><span data-stu-id="1efa3-104">**Error ID:** BC36016</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c9b74-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c9b74-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1efa3-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1efa3-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="c9b74-106">해당 메시지에서 이유 및 가능한 해결 방법을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="c9b74-106">Examine the cited message for the reason and possible remedy.</span></span>  
+1.  <span data-ttu-id="1efa3-106">해당 메시지에서 이유 및 가능한 해결 방법을 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="1efa3-106">Examine the cited message for the reason and possible remedy.</span></span>  
   
-2.  <span data-ttu-id="c9b74-107">오류가 계속 발생하면 해당 상황에 대한 정보를 수집하여 Microsoft 기술 지원 서비스에 알립니다.</span><span class="sxs-lookup"><span data-stu-id="c9b74-107">If the error persists, gather information about the circumstances and notify Microsoft Product Support services.</span></span>  
+2.  <span data-ttu-id="1efa3-107">오류가 계속 발생하면 해당 상황에 대한 정보를 수집하여 Microsoft 기술 지원 서비스에 알립니다.</span><span class="sxs-lookup"><span data-stu-id="1efa3-107">If the error persists, gather information about the circumstances and notify Microsoft Product Support services.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c9b74-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="c9b74-108">See also</span></span>
-- [<span data-ttu-id="c9b74-109">의견 보내기</span><span class="sxs-lookup"><span data-stu-id="c9b74-109">Talk to Us</span></span>](/visualstudio/ide/talk-to-us)
+## <a name="see-also"></a><span data-ttu-id="1efa3-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="1efa3-108">See also</span></span>
+- [<span data-ttu-id="1efa3-109">의견 보내기</span><span class="sxs-lookup"><span data-stu-id="1efa3-109">Talk to Us</span></span>](/visualstudio/ide/talk-to-us)
