--- a/docs/visual-basic/misc/bc36625.md
+++ b/docs/visual-basic/misc/bc36625.md
@@ -1,5 +1,5 @@
 ---
-title: 람다 식을 변환할 수 없는 '&lt;typename&gt;'하므로'&lt;typename&gt;' 대리자 형식이 아닌
+title: 람다 식을 변환할 수 없는 '<typename>'하므로'<typename>' 대리자 형식이 아닌
 ms.date: 07/20/2015
 f1_keywords:
 - bc36625
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36625
 ms.assetid: c03634d4-d831-4f8c-b6ab-566465968e4d
-ms.openlocfilehash: be965c73f03e22bdfab0514dc0fb9277739614cd
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: fbdfd970981b0b5e6d06262a8779ffa8d116488a
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54718437"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55263786"
 ---
-# <a name="lambda-expression-cannot-be-converted-to-lttypenamegt-because-lttypenamegt-is-not-a-delegate-type"></a><span data-ttu-id="c6832-102">람다 식을 변환할 수 없는 '&lt;typename&gt;'하므로'&lt;typename&gt;' 대리자 형식이 아닌</span><span class="sxs-lookup"><span data-stu-id="c6832-102">Lambda expression cannot be converted to '&lt;typename&gt;' because '&lt;typename&gt;' is not a delegate type</span></span>
-<span data-ttu-id="c6832-103">람다 식은 대리자가 유효한 위치에서 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="c6832-103">Lambda expressions can be used where delegates are valid.</span></span> <span data-ttu-id="c6832-104">호환되는 대리자 형식으로 변환할 수 있지만 다른 형식으로는 변환할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="c6832-104">They can be converted to compatible delegate types, but not to any other type.</span></span> <span data-ttu-id="c6832-105">예를 들어 대리자 형식을 정의한 다음 여기에 람다 식을 할당하거나, 람다 식을 인수로 <xref:System.Func%601> 매개 변수에 보낼 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="c6832-105">For example, you can define a delegate type and assign a lambda expression to it, or send a lambda expression as the argument to a <xref:System.Func%601> parameter.</span></span> <span data-ttu-id="c6832-106">이러한 예제가 다음 코드에 표시됩니다.</span><span class="sxs-lookup"><span data-stu-id="c6832-106">These examples are shown in the following code.</span></span>  
+# <a name="lambda-expression-cannot-be-converted-to-typename-because-typename-is-not-a-delegate-type"></a><span data-ttu-id="2a4a9-102">람다 식을 변환할 수 없는 '\<typename >' 때문에 '\<typename >' 대리자 형식이 아닌</span><span class="sxs-lookup"><span data-stu-id="2a4a9-102">Lambda expression cannot be converted to '\<typename>' because '\<typename>' is not a delegate type</span></span>
+<span data-ttu-id="2a4a9-103">람다 식은 대리자가 유효한 위치에서 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="2a4a9-103">Lambda expressions can be used where delegates are valid.</span></span> <span data-ttu-id="2a4a9-104">호환되는 대리자 형식으로 변환할 수 있지만 다른 형식으로는 변환할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="2a4a9-104">They can be converted to compatible delegate types, but not to any other type.</span></span> <span data-ttu-id="2a4a9-105">예를 들어 대리자 형식을 정의한 다음 여기에 람다 식을 할당하거나, 람다 식을 인수로 <xref:System.Func%601> 매개 변수에 보낼 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="2a4a9-105">For example, you can define a delegate type and assign a lambda expression to it, or send a lambda expression as the argument to a <xref:System.Func%601> parameter.</span></span> <span data-ttu-id="2a4a9-106">이러한 예제가 다음 코드에 표시됩니다.</span><span class="sxs-lookup"><span data-stu-id="2a4a9-106">These examples are shown in the following code.</span></span>  
   
 ```vb  
 Module Module1  
@@ -41,7 +41,7 @@ Module Module1
 End Module  
 ```  
   
- <span data-ttu-id="c6832-107">**오류 ID:** BC36625</span><span class="sxs-lookup"><span data-stu-id="c6832-107">**Error ID:** BC36625</span></span>  
+ <span data-ttu-id="2a4a9-107">**오류 ID:** BC36625</span><span class="sxs-lookup"><span data-stu-id="2a4a9-107">**Error ID:** BC36625</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c6832-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="c6832-108">See also</span></span>
-- [<span data-ttu-id="c6832-109">람다 식</span><span class="sxs-lookup"><span data-stu-id="c6832-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+## <a name="see-also"></a><span data-ttu-id="2a4a9-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="2a4a9-108">See also</span></span>
+- [<span data-ttu-id="2a4a9-109">람다 식</span><span class="sxs-lookup"><span data-stu-id="2a4a9-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
