--- a/docs/visual-basic/misc/bc36649-bc36646.md
+++ b/docs/visual-basic/misc/bc36649-bc36646.md
@@ -1,5 +1,5 @@
 ---
-title: 확장 메서드에서 형식 매개 변수의 데이터 형식을 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'이 인수에서 유추할 수 없습니다.
+title: 확장 메서드에서 형식 매개 변수의 데이터 형식을 '<methodname>'에 정의 된'<typename>'이 인수에서 유추할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc36649
@@ -10,22 +10,22 @@ helpviewer_keywords:
 - BC36649
 - BC36646
 ms.assetid: 55274b01-6d78-4950-861e-07d9273ef76e
-ms.openlocfilehash: 4c50910a9e4bdd85229fe3f4e4cfc3ac00e55714
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 70d2daeab1c328ca587819141ee15494df242a47
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54536206"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266600"
 ---
-# <a name="data-types-of-the-type-parameters-in-extension-method-ltmethodnamegt-defined-in-lttypenamegt-cannot-be-inferred-from-these-arguments"></a><span data-ttu-id="3b691-102">확장 메서드에서 형식 매개 변수의 데이터 형식을 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'이 인수에서 유추할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="3b691-102">Data type(s) of the type parameter(s) in extension method '&lt;methodname&gt;' defined in '&lt;typename&gt;' cannot be inferred from these arguments</span></span>
-<span data-ttu-id="3b691-103">확장 메서드에서 형식 매개 변수의 데이터 형식을 '\<methodname >'에 정의 된 '\<typename >'이 인수에서 유추할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="3b691-103">Data type(s) of the type parameter(s) in extension method '\<methodname>' defined in '\<typename>' cannot be inferred from these arguments.</span></span> <span data-ttu-id="3b691-104">데이터 형식을 명시적으로 지정하면 이 오류를 해결할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="3b691-104">Specifying the data type(s) explicitly might correct this error.</span></span>  
+# <a name="data-types-of-the-type-parameters-in-extension-method-methodname-defined-in-typename-cannot-be-inferred-from-these-arguments"></a><span data-ttu-id="1f565-102">확장 메서드에서 형식 매개 변수의 데이터 형식을 '\<methodname >'에 정의 된 '\<typename >'이 인수에서 유추할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1f565-102">Data type(s) of the type parameter(s) in extension method '\<methodname>' defined in '\<typename>' cannot be inferred from these arguments</span></span>
+<span data-ttu-id="1f565-103">확장 메서드에서 형식 매개 변수의 데이터 형식을 '\<methodname >'에 정의 된 '\<typename >'이 인수에서 유추할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="1f565-103">Data type(s) of the type parameter(s) in extension method '\<methodname>' defined in '\<typename>' cannot be inferred from these arguments.</span></span> <span data-ttu-id="1f565-104">데이터 형식을 명시적으로 지정하면 이 오류를 해결할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="1f565-104">Specifying the data type(s) explicitly might correct this error.</span></span>  
   
- <span data-ttu-id="3b691-105">제네릭 확장 메서드에 대한 호출을 평가할 때 형식 유추를 사용하여 형식 매개 변수의 데이터 형식을 확인하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="3b691-105">An attempt has been made to use type inference to determine the data type (or types) of the type parameter (or parameters) when evaluating a call to a generic extension method.</span></span> <span data-ttu-id="3b691-106">그러나 이 메서드에서 형식 매개 변수에 대한 데이터 형식을 찾을 수 없어 오류가 보고되었습니다.</span><span class="sxs-lookup"><span data-stu-id="3b691-106">However, the compiler is not able to find a data type for the type parameters in this method, and it reports the error.</span></span>  
+ <span data-ttu-id="1f565-105">제네릭 확장 메서드에 대한 호출을 평가할 때 형식 유추를 사용하여 형식 매개 변수의 데이터 형식을 확인하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="1f565-105">An attempt has been made to use type inference to determine the data type (or types) of the type parameter (or parameters) when evaluating a call to a generic extension method.</span></span> <span data-ttu-id="1f565-106">그러나 이 메서드에서 형식 매개 변수에 대한 데이터 형식을 찾을 수 없어 오류가 보고되었습니다.</span><span class="sxs-lookup"><span data-stu-id="1f565-106">However, the compiler is not able to find a data type for the type parameters in this method, and it reports the error.</span></span>  
   
 > [!NOTE]
->  <span data-ttu-id="3b691-107">인수 지정이 옵션이 아닌 경우(예: 쿼리 식의 쿼리 연산자) 두 번째 문장 없이 오류 메시지가 나타납니다.</span><span class="sxs-lookup"><span data-stu-id="3b691-107">When specifying arguments is not an option (for example, for query operators in query expressions), the error message appears without the second sentence.</span></span>  
+>  <span data-ttu-id="1f565-107">인수 지정이 옵션이 아닌 경우(예: 쿼리 식의 쿼리 연산자) 두 번째 문장 없이 오류 메시지가 나타납니다.</span><span class="sxs-lookup"><span data-stu-id="1f565-107">When specifying arguments is not an option (for example, for query operators in query expressions), the error message appears without the second sentence.</span></span>  
   
- <span data-ttu-id="3b691-108">다음 코드에서는 오류를 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="3b691-108">The following code demonstrates the error.</span></span>  
+ <span data-ttu-id="1f565-108">다음 코드에서는 오류를 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="1f565-108">The following code demonstrates the error.</span></span>  
   
 ```vb  
 Module Module1  
@@ -54,14 +54,14 @@ Class ClassExample
 End Class  
 ```  
   
- <span data-ttu-id="3b691-109">**오류 ID:** BC36649 및 BC36646</span><span class="sxs-lookup"><span data-stu-id="3b691-109">**Error ID:** BC36649 and BC36646</span></span>  
+ <span data-ttu-id="1f565-109">**오류 ID:** BC36649 및 BC36646</span><span class="sxs-lookup"><span data-stu-id="1f565-109">**Error ID:** BC36649 and BC36646</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3b691-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3b691-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1f565-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="1f565-110">To correct this error</span></span>  
   
--   <span data-ttu-id="3b691-111">형식 유추를 사용하지 않고 형식 매개 변수에 대한 데이터 형식을 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="3b691-111">You may be able to specify a data type for the type parameter or parameters instead of relying on type inference.</span></span>  
+-   <span data-ttu-id="1f565-111">형식 유추를 사용하지 않고 형식 매개 변수에 대한 데이터 형식을 지정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="1f565-111">You may be able to specify a data type for the type parameter or parameters instead of relying on type inference.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3b691-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="3b691-112">See also</span></span>
-- [<span data-ttu-id="3b691-113">완화된 대리자 변환</span><span class="sxs-lookup"><span data-stu-id="3b691-113">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
-- [<span data-ttu-id="3b691-114">확장명 메서드</span><span class="sxs-lookup"><span data-stu-id="3b691-114">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="3b691-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="3b691-115">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [<span data-ttu-id="3b691-116">Visual Basic의 형식 변환</span><span class="sxs-lookup"><span data-stu-id="3b691-116">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
+## <a name="see-also"></a><span data-ttu-id="1f565-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="1f565-112">See also</span></span>
+- [<span data-ttu-id="1f565-113">완화된 대리자 변환</span><span class="sxs-lookup"><span data-stu-id="1f565-113">Relaxed Delegate Conversion</span></span>](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [<span data-ttu-id="1f565-114">확장명 메서드</span><span class="sxs-lookup"><span data-stu-id="1f565-114">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="1f565-115">Generic Procedures in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1f565-115">Generic Procedures in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
+- [<span data-ttu-id="1f565-116">Visual Basic의 형식 변환</span><span class="sxs-lookup"><span data-stu-id="1f565-116">Type Conversions in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/type-conversions.md)
