--- a/docs/visual-basic/misc/bc42016.md
+++ b/docs/visual-basic/misc/bc42016.md
@@ -1,5 +1,5 @@
 ---
-title: 암시적 변환에서 '&lt;typename1&gt;'to'&lt;typename2&gt;'
+title: 암시적 변환에서 '<typename1>'에'<typename2>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42016
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC42016
 ms.assetid: 7dabaab0-8258-4c17-927f-28e61f50bd3a
-ms.openlocfilehash: a9822d352187e9f362bdaa2fc3d64ef404f0510c
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 696b0c76383ff91f5c5abe12ffd7eb543981aad0
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54578655"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55261401"
 ---
-# <a name="implicit-conversion-from-lttypename1gt-to-lttypename2gt"></a><span data-ttu-id="212d3-102">암시적 변환에서 '&lt;typename1&gt;'to'&lt;typename2&gt;'</span><span class="sxs-lookup"><span data-stu-id="212d3-102">Implicit conversion from '&lt;typename1&gt;' to '&lt;typename2&gt;'</span></span>
-<span data-ttu-id="212d3-103">식 또는 대입문이 한 데이터 형식의 값을 받아서 다른 형식으로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="212d3-103">An expression or an assignment statement takes a value of one data type and converts it to another type.</span></span> <span data-ttu-id="212d3-104">변환 키워드를 사용하지 않으므로 변환은 *암시적*입니다.</span><span class="sxs-lookup"><span data-stu-id="212d3-104">Because no conversion keyword is used, the conversion is *implicit*.</span></span>  
+# <a name="implicit-conversion-from-typename1-to-typename2"></a><span data-ttu-id="83ded-102">암시적 변환에서 '\<typename1 >'에 '\<typename2 >'</span><span class="sxs-lookup"><span data-stu-id="83ded-102">Implicit conversion from '\<typename1>' to '\<typename2>'</span></span>
+<span data-ttu-id="83ded-103">식 또는 대입문이 한 데이터 형식의 값을 받아서 다른 형식으로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="83ded-103">An expression or an assignment statement takes a value of one data type and converts it to another type.</span></span> <span data-ttu-id="83ded-104">변환 키워드를 사용하지 않으므로 변환은 *암시적*입니다.</span><span class="sxs-lookup"><span data-stu-id="83ded-104">Because no conversion keyword is used, the conversion is *implicit*.</span></span>  
   
- <span data-ttu-id="212d3-105">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="212d3-105">By default, this message is a warning.</span></span> <span data-ttu-id="212d3-106">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="212d3-106">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="83ded-105">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="83ded-105">By default, this message is a warning.</span></span> <span data-ttu-id="83ded-106">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="83ded-106">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="212d3-107">**오류 ID:** BC42016</span><span class="sxs-lookup"><span data-stu-id="212d3-107">**Error ID:** BC42016</span></span>  
+ <span data-ttu-id="83ded-107">**오류 ID:** BC42016</span><span class="sxs-lookup"><span data-stu-id="83ded-107">**Error ID:** BC42016</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="212d3-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="212d3-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="83ded-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="83ded-108">To correct this error</span></span>  
   
--   <span data-ttu-id="212d3-109">가능 하면 Visual Basic 모든 변환을 수행 하지 않아도 되므로 동일한 데이터 형식의 값을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="212d3-109">If possible, use values of the same data type, so Visual Basic does not need to do any conversion.</span></span>  
+-   <span data-ttu-id="83ded-109">가능 하면 Visual Basic 모든 변환을 수행 하지 않아도 되므로 동일한 데이터 형식의 값을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="83ded-109">If possible, use values of the same data type, so Visual Basic does not need to do any conversion.</span></span>  
   
--   <span data-ttu-id="212d3-110">변환이 `CType` 명시적 *이 되도록*또는 다른 변환 키워드 중 하나를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="212d3-110">Use `CType` or one of the other conversion keywords so that the conversion is *explicit*.</span></span>  
+-   <span data-ttu-id="83ded-110">변환이 `CType` 명시적 *이 되도록*또는 다른 변환 키워드 중 하나를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="83ded-110">Use `CType` or one of the other conversion keywords so that the conversion is *explicit*.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="212d3-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="212d3-111">See also</span></span>
-- [<span data-ttu-id="212d3-112">암시적 변환과 명시적 변환</span><span class="sxs-lookup"><span data-stu-id="212d3-112">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
-- [<span data-ttu-id="212d3-113">형식 변환 함수</span><span class="sxs-lookup"><span data-stu-id="212d3-113">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)
+## <a name="see-also"></a><span data-ttu-id="83ded-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="83ded-111">See also</span></span>
+- [<span data-ttu-id="83ded-112">암시적 변환과 명시적 변환</span><span class="sxs-lookup"><span data-stu-id="83ded-112">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [<span data-ttu-id="83ded-113">형식 변환 함수</span><span class="sxs-lookup"><span data-stu-id="83ded-113">Type Conversion Functions</span></span>](../../visual-basic/language-reference/functions/type-conversion-functions.md)
