commit translated contents

--- a/docs/visual-basic/misc/bc40048.md
+++ b/docs/visual-basic/misc/bc40048.md
@@ -1,5 +1,5 @@
 ---
-title: 형식 매개 변수 '&lt;typeparametername&gt;' 바깥쪽 형식의 형식 매개 변수와 동일한 이름을 가진
+title: 형식 매개 변수 '<typeparametername>' 바깥쪽 형식의 형식 매개 변수와 동일한 이름을 가진
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40048
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC40048
 ms.assetid: d5428b36-88d3-42c4-a096-cbc7bb9571f2
-ms.openlocfilehash: 11fa4e147236472887d75bb0df70cad7cbd63b18
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 8bc9c9280cfe425bfd55cfbfe9fa43c925a8a3f9
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54731961"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266700"
 ---
-# <a name="type-parameter-lttypeparameternamegt-has-the-same-name-as-a-type-parameter-of-an-enclosing-type"></a>형식 매개 변수 '&lt;typeparametername&gt;' 바깥쪽 형식의 형식 매개 변수와 동일한 이름을 가진
+# <a name="type-parameter-typeparametername-has-the-same-name-as-a-type-parameter-of-an-enclosing-type"></a>형식 매개 변수 '\<typeparametername >' 바깥쪽 형식의 형식 매개 변수와 동일한 이름을 가진
 제네릭 형식의 형식 매개 변수가 포함하는 제네릭 형식의 형식 매개 변수와 같은 이름으로 선언됩니다.  
   
  제네릭 형식의 형식 매개 변수 목록에서 각 형식 매개 변수 이름은 다음 이름과 모두 구별되어야 합니다.  
