--- a/docs/visual-basic/misc/bc30045.md
+++ b/docs/visual-basic/misc/bc30045.md
@@ -1,5 +1,5 @@
 ---
-title: 특성 생성자에는 매개 변수 형식 '&lt;형식&gt;'에가 아니거나 정수 계열, 부동 소수점 또는 열거형 형식 또는 Char, String, Boolean, System.Type 또는 이러한 형식의 1 차원 배열에 대 한 중
+title: 특성 생성자에는 매개 변수 형식 '<type>'에가 아니거나 정수 계열, 부동 소수점 또는 열거형 형식 또는 Char, String, Boolean, System.Type 또는 이러한 형식의 1 차원 배열에 대 한 중
 ms.date: 07/20/2015
 f1_keywords:
 - bc30045
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30045
 ms.assetid: 16899755-7901-4c56-ae90-54c3532e8319
-ms.openlocfilehash: cd25c4cf14e28994c4cd9d0cfedc3a29e459739a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 7b08c2edd649a101c15910807d384e6ff8efbfca
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54703655"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266470"
 ---
-# <a name="attribute-constructor-has-a-parameter-of-type-lttypegt-which-is-not-an-integral-floating-point-or-enum-type-or-one-of-char-string-boolean-systemtype-or-1-dimensional-array-of-these-types"></a>특성 생성자에는 매개 변수 형식 '&lt;형식&gt;'에가 아니거나 정수 계열, 부동 소수점 또는 열거형 형식 또는 Char, String, Boolean, System.Type 또는 이러한 형식의 1 차원 배열에 대 한 중
+# <a name="attribute-constructor-has-a-parameter-of-type-type-which-is-not-an-integral-floating-point-or-enum-type-or-one-of-char-string-boolean-systemtype-or-1-dimensional-array-of-these-types"></a>특성 생성자에는 매개 변수 형식 '\<유형 >'에가 아니거나 정수 계열, 부동 소수점 또는 열거형 형식 또는 Char, String, Boolean, System.Type 또는 이러한 형식의 1 차원 배열에 대 한 중
 매개 변수에 대한 잘못된 데이터 형식을 지정하는 생성자가 사용자 지정 특성 정의에 포함되어 있습니다. 특성의 형식만 어셈블리에 대한 메타데이터로 serialize될 수 있으므로 특성은 특정 데이터 형식만 매개 변수로 사용할 수 있습니다.  
   
  **오류 ID:** BC30045  
