--- a/docs/visual-basic/misc/bc31394.md
+++ b/docs/visual-basic/misc/bc31394.md
@@ -1,5 +1,5 @@
 ---
-title: 형식의 식은 '&lt;typename&gt;' 'Object' 또는 'ValueType'로 변환할 수 없습니다.
+title: 형식의 식은 '<typename>' 'Object' 또는 'ValueType'로 변환할 수 없습니다.
 ms.date: 07/20/2015
 f1_keywords:
 - bc31394
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31394
 ms.assetid: e6f76257-65bb-4954-99f9-90f282648354
-ms.openlocfilehash: e02f01f7088a873756a91f8de206c09d2c4cf80f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 5a045d8f257e1849c7d45df002340a62344c5699
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54740517"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266556"
 ---
-# <a name="expression-of-type-lttypenamegt-cannot-be-converted-to-object-or-valuetype"></a>형식의 식은 '&lt;typename&gt;' 'Object' 또는 'ValueType'로 변환할 수 없습니다.
+# <a name="expression-of-type-typename-cannot-be-converted-to-object-or-valuetype"></a>형식의 식은 '\<typename >' 'Object' 또는 'ValueType'로 변환할 수 없습니다.
 식이 CLR(공용 언어 런타임)에서 boxing될 수 없는 형식으로 계산합니다.  
   
  *Boxing* 은 형식을 경우에 따라 `Object` 또는 <xref:System.ValueType>으로 변환하는 데 필요한 처리를 참조합니다. 공용 언어 런타임에서 특정 형식(예: <xref:System.ArgIterator> 및 <xref:System.TypedReference>)을 boxing할 수 없습니다.  
