commit translated contents

--- a/docs/visual-basic/misc/bc31074.md
+++ b/docs/visual-basic/misc/bc31074.md
@@ -1,5 +1,5 @@
 ---
-title: 대리자 생성자 형식에 대 한 '&lt;typename&gt;' 필요한 대리자의 구현을 찾을 수 없습니다
+title: 형식에 대 한 대리 생성자 '<typename>' 필요한 대리자의 구현을 찾을 수 없습니다
 ms.date: 07/20/2015
 f1_keywords:
 - bc31074
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31074
 ms.assetid: d23311f4-e918-4306-b4f5-77be96a7b5b8
-ms.openlocfilehash: 566dc8d5d5f7acb1fbe62867f5b2e36a7bea8f5c
-ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
+ms.openlocfilehash: 24ecd98805e38336fb46c87860226f93093cbe92
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 12/22/2018
-ms.locfileid: "53769703"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55271839"
 ---
-# <a name="delegate-constructor-for-type-lttypenamegt-necessary-for-the-implementation-of-delegates-cannot-be-found"></a>대리자 생성자 형식에 대 한 '&lt;typename&gt;' 필요한 대리자의 구현을 찾을 수 없습니다
+# <a name="delegate-constructor-for-type-typename-necessary-for-the-implementation-of-delegates-cannot-be-found"></a>형식에 대 한 대리 생성자 '\<typename >' 대리자의 구현을 찾을 수 없습니다 하는 데 필요한
 형식을 포함하는 어셈블리가 손상되었거나 잘못되었을 수 있습니다.  
   
  **오류 ID:** BC31074  
