--- a/docs/visual-basic/misc/bc30614.md
+++ b/docs/visual-basic/misc/bc30614.md
@@ -1,5 +1,5 @@
 ---
-title: "'MustOverride' 메서드 '&lt;methodname&gt;' 'MyClass'를 사용 하 여 호출할 수 없습니다."
+title: "'MustOverride' 메서드 '<methodname>' 'MyClass'를 사용 하 여 호출할 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - bc30614
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30614
 ms.assetid: fc57af41-1552-46d1-9727-341f1835e661
-ms.openlocfilehash: 5a67fcca98dd8ccc0b70183ecf59f55ef740080a
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 1cd01d7e1229762252d807388a7a4c6e892f4628
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54563053"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266697"
 ---
-# <a name="mustoverride-method-ltmethodnamegt-cannot-be-called-with-myclass"></a>'MustOverride' 메서드 '&lt;methodname&gt;' 'MyClass'를 사용 하 여 호출할 수 없습니다.
+# <a name="mustoverride-method-methodname-cannot-be-called-with-myclass"></a>'MustOverride' 메서드 '\<methodname >' 'MyClass'를 사용 하 여 호출할 수 없습니다.
 `MyClass` 는 `Me`와 일치하지만 이에 대한 모든 메서드를 호출하면 호출되는 메서드가 `NotOverridable`인 것으로 처리됩니다.  
   
  **오류 ID:** BC30614  
