--- a/docs/visual-basic/misc/bc30750.md
+++ b/docs/visual-basic/misc/bc30750.md
@@ -1,5 +1,5 @@
 ---
-title: 정보 유형에 대 한 '&lt;typename&gt;' 런타임으로 로드 되지 않았습니다
+title: 형식에 대 한 정보 '<typename>' 런타임으로 로드 되지 않았습니다
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30750
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30750
 ms.assetid: b0f074f9-571d-48f8-b334-4fd34b61cd89
-ms.openlocfilehash: 69fe40e38e5bc3608efbb1dc24a8527f60336410
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 5aeabb965fdf686633982b5c4f228097e14e9085
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54708625"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55271930"
 ---
-# <a name="information-for-the-type-of-lttypenamegt-has-not-been-loaded-into-the-runtime"></a>정보 유형에 대 한 '&lt;typename&gt;' 런타임으로 로드 되지 않았습니다
+# <a name="information-for-the-type-of-typename-has-not-been-loaded-into-the-runtime"></a>형식에 대 한 정보 '\<typename >' 런타임으로 로드 되지 않았습니다
 런타임에 의해 로드되지 않은 형식이 참조되었습니다.  
   
  **오류 ID:** BC30750  
