--- a/docs/visual-basic/misc/bc30951.md
+++ b/docs/visual-basic/misc/bc30951.md
@@ -1,5 +1,5 @@
 ---
-title: 메서드에 전달 하는 형식 인수의 개수가 잘못 되었습니다. '&lt;genericprocedurename&gt;'
+title: 메서드에 전달 하는 형식 인수의 개수가 잘못 되었습니다. '<genericprocedurename>'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30951
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30951
 ms.assetid: 84c2f0cb-5706-4b4e-967c-0ca35a20913c
-ms.openlocfilehash: 5dddbe8c1a0de119acab4fdd685c248c9d990d49
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 821dbd61e16f137a67d833b3b0addf3e43b8d672
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54667624"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266678"
 ---
-# <a name="wrong-number-of-type-arguments-passed-to-method-ltgenericprocedurenamegt"></a>메서드에 전달 하는 형식 인수의 개수가 잘못 되었습니다. '&lt;genericprocedurename&gt;'
+# <a name="wrong-number-of-type-arguments-passed-to-method-genericprocedurename"></a>메서드에 전달 하는 형식 인수의 개수가 잘못 되었습니다. '\<genericprocedurename >'
 정의된 형식 매개 변수 수와 일치하지 않는 여러 형식 인수와 함께 제네릭 프로시저가 호출되었습니다.  
   
  **오류 ID:** BC30951  
