--- a/docs/visual-basic/misc/bc31411.md
+++ b/docs/visual-basic/misc/bc31411.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;typename&gt;' 선언 'MustOverride' 메서드를 포함 하므로 'MustInherit' 선언 해야 합니다"
+title: "'<typename>' 선언 'MustOverride' 메서드를 포함 하므로 'MustInherit' 선언 해야 합니다"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31411
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31411
 ms.assetid: 5a9f4c57-a4b8-45f5-8273-b7caa689a170
-ms.openlocfilehash: a47bc9d96ba7e1f61ebde68fd08149128e36866f
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: dc6a56edf1c1777f43257ba2cf37c0fa7bef76ac
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54633546"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55264127"
 ---
-# <a name="lttypenamegt-must-be-declared-mustinherit-because-it-contains-methods-declared-mustoverride"></a>'&lt;typename&gt;' 선언 'MustOverride' 메서드를 포함 하므로 'MustInherit' 선언 해야 합니다
+# <a name="typename-must-be-declared-mustinherit-because-it-contains-methods-declared-mustoverride"></a>'\<typename >' 선언 'MustOverride' 메서드를 포함 하므로 'MustInherit' 선언 해야 합니다
 `MustOverride` 멤버를 포함하는 형식이 `MustInherit`로 선언되어야 합니다.  
   
  **오류 ID:** BC31411  
