--- a/docs/visual-basic/misc/bc32006.md
+++ b/docs/visual-basic/misc/bc32006.md
@@ -1,5 +1,5 @@
 ---
-title: "'Char' 값을 변환할 수 없습니다. '&lt;typename&gt;'"
+title: "'Char' 값을 변환할 수 없습니다. '<typename>'"
 ms.date: 07/20/2015
 f1_keywords:
 - bc32006
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32006
 ms.assetid: c033f65e-a315-47fc-be2e-ed371847a221
-ms.openlocfilehash: 3f06c0b92b5ff54950e73fe713822ad05734c99b
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 625212bd7825ec487391513f171c9dde1eb3918a
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54683166"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55269292"
 ---
-# <a name="char-values-cannot-be-converted-to-lttypenamegt"></a>'Char' 값을 변환할 수 없습니다. '&lt;typename&gt;'
+# <a name="char-values-cannot-be-converted-to-typename"></a>'Char' 값을 변환할 수 없습니다. '\<typename >'
 'Char' 값을 변환할 수 없습니다. '\<typename >'입니다. Microsoft.VisualBasic.AscW를 사용하여 문자를 유니코드 값으로 해석하거나 Microsoft.VisualBasic.Val을 사용하여 문자를 숫자로 해석하세요.  
   
  식에서 `Char` 값을 `String` 또는 `Object`이외의 데이터 형식으로 변환하려고 합니다.  
