--- a/docs/visual-basic/misc/bc36590.md
+++ b/docs/visual-basic/misc/bc36590.md
@@ -1,5 +1,5 @@
 ---
-title: 확장 메서드는 형식 인수가 너무 적습니다 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'
+title: 확장 메서드는 형식 인수가 너무 적습니다 '<methodname>'에 정의 된'<typename>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36590
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36590
 ms.assetid: 8a9dd2d3-d8af-4ef5-8427-eb6e83d16230
-ms.openlocfilehash: 0947db41829280d2651f1dc0333f8ea590373dea
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 5192099ca4fdc45a670e5338a33326e8c5baa896
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54606022"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55266587"
 ---
-# <a name="too-few-type-arguments-to-extension-method-ltmethodnamegt-defined-in-lttypenamegt"></a>확장 메서드는 형식 인수가 너무 적습니다 '&lt;methodname&gt;'에 정의 된'&lt;typename&gt;'
+# <a name="too-few-type-arguments-to-extension-method-methodname-defined-in-typename"></a>확장 메서드는 형식 인수가 너무 적습니다 '\<methodname >'에 정의 된 '\<typename >'
 메서드 정의의 형식 매개 변수보다 적은 형식 인수로 제네릭 확장 메서드를 호출했습니다.  
   
  제네릭 메서드를 호출할 때 해당 메서드에서 정의한 각 형식 매개 변수에 대해 하나의 형식 인수를 제공해야 합니다.  
