--- a/docs/visual-basic/misc/bc42102.md
+++ b/docs/visual-basic/misc/bc42102.md
@@ -1,5 +1,5 @@
 ---
-title: "'&lt;propertyname&gt;' 'Let' 속성으로 COM에 노출 될 수 없습니다."
+title: "'<propertyname>' 'Let' 속성으로 COM에 노출 될 수 없습니다."
 ms.date: 07/20/2015
 f1_keywords:
 - bc42102
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC42102
 ms.assetid: b77c5b7c-ac43-4b2d-b8bc-582e65e6f7e7
-ms.openlocfilehash: 71bc75182f6b2ebc463004ddc8070d46f1542473
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 683348720db5a44e1fc9bc793861bca28ad46d96
+ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54513804"
+ms.lasthandoff: 01/30/2019
+ms.locfileid: "55267029"
 ---
-# <a name="ltpropertynamegt-cannot-be-exposed-to-com-as-a-property-let"></a>'&lt;propertyname&gt;' 'Let' 속성으로 COM에 노출 될 수 없습니다.
+# <a name="propertyname-cannot-be-exposed-to-com-as-a-property-let"></a>'\<propertyname >' 'Let' 속성으로 COM에 노출 될 수 없습니다.
 '\<propertyname >' 'Let' 속성으로 COM에 노출할 수 없습니다. Visual Basic 6.0의 'Let' 문을 사용하여 이 속성에 숫자나 문자열 같은 개체가 아닌 값을 할당할 수 없습니다.  
   
  `COMClassAttribute` 특성 블록을 사용하는 클래스는 `Public` 데이터 형식을 사용하여 `Object`속성을 선언합니다. Visual Basic 6.0 프로그램에서 `Variant`로 이 속성에 액세스할 수 있지만, `Set` 문에서 이 속성에 개체 참조만 할당할 수 있습니다. `Let` 문에서 값 형식을 할당할 수 없습니다.  
